--- a/src/05-familia.html
+++ b/src/05-familia.html
@@ -161,7 +161,7 @@
       mismos al evitarles oportunidades de incurrir en situaciones peligrosas.
       Esto puede lograrse al ocupar su tiempo con actividades positivas que los
       alejen de situaciones riesgosas. El bata es una excelente opción para
-      ocupar su tiem- po, su mente y su corazón ocupados.
+      ocupar su tiempo, su mente y su corazón ocupados.
     </p>
     <h2>OBJETIVOS CUMPLIDOS:</h2>
     <p>
@@ -177,7 +177,7 @@
     <h3>- Orientación:</h3>
     <p>
       Esta actividad busca generar un espacio para compartir un día de
-      actividades con los miem- bros de la familia y fortalecer los vínculos
+      actividades con los miembros de la familia y fortalecer los vínculos
       fraternos.
     </p>
     <h3>- Actividad:</h3>
@@ -211,7 +211,7 @@
       afuera y cocinaba para adentro. La mujer era una criolla más bien gordita,
       y cuando se reía era una gloria: como si la risa le naciera de los pechos.
       Daba gusto. Doña Patrocinio tenía cinco hijos ya mozos, bien plantados y de
-      bastante pinta; no había mu- chacha del barrio que no tejiera alguna
+      bastante pinta; no había muchacha del barrio que no tejiera alguna
       esperanza con alguno de ellos.
     </p>
     <p>
@@ -236,7 +236,7 @@
     </ul>
     <p>
       El segundo de los hijos era escritor y había alcanzado cierta fama con sus
-      libros. En ellos con- taba fabulosas historias de caballos alados,
+      libros. En ellos contaba fabulosas historias de caballos alados,
       palacios de cristal y hadas milagrosas.
     </p>
     <p>
@@ -246,7 +246,7 @@
     </p>
     <p>
       El tercer hijo era comerciante. Vivía entre dos maquinitas: la de Calcular
-      y el reloj pulsera…. aun- que últimamente vivía también pegado a los
+      y el reloj pulsera…. aunque últimamente vivía también pegado a los
       noticiosos sobre finanzas, plazos fijos y cotización
     </p>
     <p>
@@ -276,7 +276,7 @@
       Entonces los hermanos mayores decidieron ponerle punto final a esta
       situación con el menor. Como excepción, haciéndose lugar entre sus
       obligaciones, los cuatro decidieron reunirse a debatir qué hacer con el
-      hermano inútil. Por eso una noche, mientras doña Patrocinio cocina- ba,
+      hermano inútil. Por eso una noche, mientras doña Patrocinio cocinaba,
       los cuatro hermanos se reunieron en puntas de pie en el comedor, para
       hablar en voz baja,
     </p>
@@ -317,7 +317,7 @@
     <ul>
       <li>
         - Mis hijitos queridos… Ustedes, con su hermano menor, que no está aquí,
-        son cinco herma- nos, Como estos cinco dedos de mi mano derecha…
+        son cinco hermanos, Como estos cinco dedos de mi mano derecha…
       </li>
     </ul>
     <p>
@@ -365,13 +365,13 @@
     </ul>
     <p>
       A partir de lo conversado, redactar intenciones cortas a modo de síntesis,
-      en donde se concre- te las ganas de seguir creciendo en los vínculos
+      en donde se concrete las ganas de seguir creciendo en los vínculos
       familiares y en las relaciones fraternas.
     </p>
     <h3>- Reﬂexión:</h3>
     <p>
       <strong>Familia cristiana:</strong> La familia cristiana es una pequeña
-      iglesia que está fundada sobre los sacramentos del bau- tismo y del
+      iglesia que está fundada sobre los sacramentos del bautismo y del
       matrimonio.
     </p>
     <p>
@@ -422,7 +422,7 @@
       <li>
         • La casa nos habla de la cultura, las cosas que se aprenden en el hogar
         nos quedan para siempre. Aquello que vivimos actualmente nos marca para
-        toda la vida. La casa es transmi- sora y fuente conservadora de cultura,
+        toda la vida. La casa es transmisora y fuente conservadora de cultura,
         de la cultura de la vida.
       </li>
       <li>
@@ -559,7 +559,7 @@
       propia casa". Desconfiamos de los grandes proyectos que quieren imponernos
       desde arriba, porque quermos cuidar la vida chiquita que podemos ver, que
       podemos palpar. Queremos abarcar mucho, pero cuidando y respetando la vida
-      que va creciendo desde abajo, "porque el fuego para ca- lentar tiene que
+      que va creciendo desde abajo, "porque el fuego para calentar tiene que
       venir desde abajo"
     </p>
     <h3>Palabra de Dios: 1 Juan 4,20-21. Amar al hermano</h3>
@@ -567,7 +567,7 @@
       <em
         >“Si alguno dice: “Yo amo a Dios”, y al mismo tiempo odia a su hermano,
         es un mentiroso. Pues si uno ama a su hermano, a quien ve, tampoco puede
-        amar a Dios, a quien no ve. Jesu- cristo nos ha dado este mandamiento:
+        amar a Dios, a quien no ve. Jesucristo nos ha dado este mandamiento:
         que el que ama a Dios, ame también a su hermano”.</em
       >
     </p>
