--- a/src/06-dialogo.html
+++ b/src/06-dialogo.html
@@ -42,7 +42,7 @@
     <ul>
       <li>
         >> Los Rastreadores-Hogueras no parecen aprovechar los tiempos libres
-        para conversar en- tre ellos, usando el tiempo para estar en sus
+        para conversar entre ellos, usando el tiempo para estar en sus
         celulares, auriculares, etc.
       </li>
       <li>
@@ -73,11 +73,11 @@
     <p>Descalzarse para entrar en el otro.</p>
     <p>
       Y me sentí impulsada a leer las palabras del Éxodo: "no te acerques más,
-      sácate tus sanda- lias, porque lo que pisas es un lugar sagrado".
+      sácate tus sandalias, porque lo que pisas es un lugar sagrado".
     </p>
     <p>
       No tardé en ponerme en oración. Jesús me presentaba uno a uno a mis
-      hermanos de comuni- dad y descubrí cómo habitualmente entró en el interior
+      hermanos de comunidad y descubrí cómo habitualmente entró en el interior
       de cada uno sin descalzarme.
     </p>
     <p>Simplemente entró. Sin fijarme en el modo entró.</p>
@@ -135,7 +135,7 @@
     </p>
     <p>
       Porque creo, Señor, que estás vivo y presente en el corazón de todos, y
-      por ello es que bus- caré detenerme, descalzarme y entrar en cada uno como
+      por ello es que buscaré detenerme, descalzarme y entrar en cada uno como
       un lugar sagrado.
     </p>
     <p>Para ello sé Señor, que cuento con Tu Gracia.</p>
@@ -170,7 +170,7 @@
         bien tomar el pan de los hijos, para tirárselo a los cachorros”. Ella
         respondió: “¡Y, sin embargo, Señor, los cachorros comen las migas que
         caen de la mesa de sus dueños!”. Entonces Jesús le dijo: “Mujer, ¡qué
-        grande es tu fe! ¡Que se cumpla tu deseo!”. Y en ese mo- mento su hija
+        grande es tu fe! ¡Que se cumpla tu deseo!”. Y en ese momento su hija
         quedó curada.»</em
       >
     </p>
@@ -196,7 +196,7 @@
       hablar de cosas personales y profundas. Nos podemos encontrar que viven en
       una cultura de evasión de uno mismo y de los problemas sociales
       iﬂuenciados por la moda y el ambiente. Con la aparición del chat y las
-      redes sociales nos encon- tramos en un mundo donde el diálogo existe, pero
+      redes sociales nos encontramos en un mundo donde el diálogo existe, pero
       de manera despersonalizada y algo anónima.
     </p>
     <h2>OBJETIVOS CUMPLIDOS:</h2>
@@ -219,14 +219,14 @@
     <h3>- Orientación:</h3>
     <p>
       La actividad busca que el Rastreador/Hoguera comprenda la importancia del
-      diálogo, enten- diendo sus dificultades tanto en la escucha como la
+      diálogo, entendiendo sus dificultades tanto en la escucha como la
       expresión
     </p>
     <h3>-Actividad: Mensaje Escrito</h3>
     <ol>
       <li>
         <strong>1.</strong> Plantear una situación de dos personas que forman
-        parte de un grupo y que por algún mo- tivo no se hablan.
+        parte de un grupo y que por algún motivo no se hablan.
       </li>
       <li>
         <strong>2.</strong> Armar dos grupos que se ubican en lugares separados,
@@ -263,7 +263,7 @@
       </li>
       <li>
         <strong>10.</strong> Con las respuestas armar un cuadro comparativo de
-        dos columnas y explicar las caracte- rísticas de un buen diálogo
+        dos columnas y explicar las características de un buen diálogo
       </li>
     </ol>
     <h3>- Reﬂexión:</h3>
@@ -305,7 +305,7 @@
     </p>
     <p>
       Es una predisposición que es necesaria para que los otros puedan
-      expresarse con comodi- dad. Si no hay una actitud de escucha no se puede
+      expresarse con comodidad. Si no hay una actitud de escucha no se puede
       dialogar bien.
     </p>
     <p>
@@ -327,7 +327,7 @@
         a mí, que soy samaritana?”. Los judíos, en efecto, no se trataban con
         los samaritanos. Jesús le respondió: “Si conocieras el don de Dios y
         quién es el que te dice: Dame de beber, tú misma se lo hubieras pedido,
-        y él te habría dado agua viva”. “Señor - le dijo ella- no tienes nada
+        y él te habría dado agua viva”. “Señor - le dijo ellano tienes nada
         para sacar el agua y el pozo es profundo. ¿De dónde scas esa agua viva?
         ¿Eres acaso más grande que nuestro padre Jacob, que nos ha dado este
         pozo, donde él bebió, lo mismo que sus hijos y sus animales?”. Jesús le
@@ -385,7 +385,7 @@
       </li>
       <li>
         3. Tiene que dictarle el dibujo a todos sus compañeros, de tal modo que
-        todos lleguen a dibu- jarlo igual al original.
+        todos lleguen a dibujarlo igual al original.
       </li>
       <li>
         4. Nadie puede preguntarle nada al voluntario, ni tampoco él al resto.
@@ -487,7 +487,7 @@
       </li>
       <li>
         <strong>9.</strong> Destacar la importancia del diálogo y la
-        comunicación como necesaria para lograr los obje- tivos del grupo.
+        comunicación como necesaria para lograr los objetivos del grupo.
       </li>
       <li>
         <strong>10.</strong> Plantear:¿Qué hicieron para poder hacer la
@@ -496,7 +496,7 @@
       </li>
       <li>
         <strong>11.</strong> Presenta el cuadro de la comunicación donde se la
-        separa en verbal y no verbal, para sin- tetizar las ideas principales
+        separa en verbal y no verbal, para sintetizar las ideas principales
       </li>
     </ol>
     <h3>- Reﬂexión:</h3>
@@ -604,7 +604,7 @@
     <p>
       ¿De qué tipo de amistad piensas que habla Don Bosco? ¿En que se relaciona
       la sugerencia de Don Bosco con el dialogo educativo que un animador debe
-      tener hacia su grupo de Rastrea- dores – Hogueras?
+      tener hacia su grupo de Rastreadores – Hogueras?
     </p>
   </body>
 </html>
