--- a/src/07-oracion.html
+++ b/src/07-oracion.html
@@ -119,11 +119,11 @@
     <p>
       Que los rastreadores-hogueras puedan darse cuenta de la integración entre
       la oración y la vida cotidiana comprendiendo que pueden descubrir la
-      presencia de Dios en diferentes mo- mentos, situaciones y lugares.
+      presencia de Dios en diferentes momentos, situaciones y lugares.
     </p>
     <p>
       Que los rastreadores-hogueras logren valorar el estilo de oración que
-      propone la espirituali- dad salesiana y latinoamericana.
+      propone la espiritualidad salesiana y latinoamericana.
     </p>
     <p>
       Que los rastreadores-hogueras redescubran la celebración de la Misa como
@@ -146,7 +146,7 @@
     <h3>- Orientaciones:</h3>
     <p>
       La actividad pretende que puedan repasar diferentes aspectos de la oración
-      a partir de la lec- tura del Evangelio.
+      a partir de la lectura del Evangelio.
     </p>
     <h3>- Actividad:</h3>
     <p>
@@ -183,7 +183,7 @@
     </p>
     <p>
       ¿Cómo es entonces nuestra oración? La oración, dentro de la espiritualidad
-      salesiana y lati- noamericana, es la prolongación de la “pasión por la
+      salesiana y latinoamericana, es la prolongación de la “pasión por la
       vida”: es una oración desde lo cotidiano.
     </p>
     <p>
@@ -199,7 +199,7 @@
     <p>
       No hay oración sin Fe. Es una forma de vivir nuestra fe. La oración debe
       formar parte de la vida de todos los días, para permitir que la verdadera
-      fe eche raíces... La oración de fe no consiste so- lamente en decir
+      fe eche raíces... La oración de fe no consiste solamente en decir
       "Señor, Señor», sino en disponer el corazón para hacer la voluntad del
       Padre.
     </p>
@@ -282,7 +282,7 @@
       actitud de agradecimiento. No creer que las cosas que cada uno tiene son
       por mérito propio y para un uso egoísta. Don Bosco solía repetir "Dios nos
       puso en este mundo para los demás". Somos servidores de Dios en nuestros
-      hermanos, y por eso la humil- dad y agradecimiento son dos virtudes que
+      hermanos, y por eso la humildad y agradecimiento son dos virtudes que
       deben caracterizarnos.
     </p>
     <p>
@@ -293,7 +293,7 @@
     <p>
       Aprendamos a agradecer a las personas que nos ayudan y saber comprender el
       valor del agrdecimiento y el afecto reconfortante en la persona que lo
-      recibe. Dios por medio de los hom- bres nos ayuda. Es un agradecimiento a
+      recibe. Dios por medio de los hombres nos ayuda. Es un agradecimiento a
       ambos.
     </p>
     <p>
@@ -302,12 +302,12 @@
     </p>
     <p>
       Don Bosco decía que de un corazón agradecido se podía esperar muchas
-      cosas. Y no sola- mente agradecer las cosas buenas.
+      cosas. Y no solamente agradecer las cosas buenas.
     </p>
     <p>
       Insistir, creer firmemente que seremos escuchados y pedir con insistencia
       es pedir con verddera fe. Para pedir con fe se requiere una honda
-      humildad; debemos reconocer que “necesita- mos la fuerza de Dios”. "Pidan
+      humildad; debemos reconocer que “necesitamos la fuerza de Dios”. "Pidan
       y se les dará, golpeen y se les abrirá."
     </p>
     <p>
@@ -425,7 +425,7 @@
     </p>
     <p>
       Estos símbolos no son para ser consumidos individualmente sino para
-      compartirlos en comu- nidad. A lo largo del camino exploradoril hay
+      compartirlos en comunidad. A lo largo del camino exploradoril hay
       numerosos ejemplos:
     </p>
     <p>
@@ -437,7 +437,7 @@
     <p>
       Agradecer, pedir, ofrecer, meditar, contemplar y proclamar con alegría la
       obra de salvación que Dios obra en lo cotidiano de los patios de nuestra
-      vida es el camino que Jesús hizo y noso- tros revivimos con el estilo de
+      vida es el camino que Jesús hizo y nosotros revivimos con el estilo de
       Don Bosco.
     </p>
     <h3>Palabra de Dios: Orar en todo tiempo (Romanos 12, 12)</h3>
@@ -679,13 +679,13 @@
     <h3>- Orientaciones:</h3>
     <p>
       La actividad pretende despertar la sensación de sentirse Iglesia-comunidad
-      a partir de la parti- cipación activa en actividades que reﬂejen la fe de
+      a partir de la participación activa en actividades que reﬂejen la fe de
       nuestro pueblo.
     </p>
     <h3>- Actividad:</h3>
     <p>
       Presentar la realización de alguna procesión religiosas, peregrinaciones,
-      encuentros especia- les u otras expresiones comunitarias de fe que
+      encuentros especiales u otras expresiones comunitarias de fe que
       organice la parroquia, el colegio, la diócesis, etc.
     </p>
     <p>
