--- a/src/08-crecimiento.html
+++ b/src/08-crecimiento.html
@@ -85,7 +85,7 @@
       erecciones y los cambios en la voz. Es importante que las chicas también
       se informen sobre los cambios por los que pasan los chicos y que los
       chicos aprendan sobre los cambios que afectan a las chicas. Nos
-      encontramos en un cambio genera- cional que nos induce a educar a los
+      encontramos en un cambio generacional que nos induce a educar a los
       nuevos adolescentes en y para la diversidad.
     </p>
     <h2>TU MOMENTO</h2>
@@ -190,7 +190,7 @@
     <p>
       Se encuentran con una realidad nueva, la sexualidad, que deben integrar en
       su persona, que deben hacer suya. Necesitan orientación, ayuda, confianza,
-      y no temor, miedo, falsa informa- ción, pornografía. Se suelen replegar
+      y no temor, miedo, falsa información, pornografía. Se suelen replegar
       sobre sí mismos y caer en la masturbación.
     </p>
     <p>
@@ -293,7 +293,7 @@
     <h3>- Actividad:</h3>
     <p>
       Presentar el texto "Creciendo en familia" sobre la vida de Don Bosco y
-      María Mazzarello y con- versar sobre las cosas que los ayudaron a ellos a
+      María Mazzarello y conversar sobre las cosas que los ayudaron a ellos a
       crecer.
     </p>
     <p><strong>Don Bosco - María Mazzarello Creciendo en familia:</strong></p>
@@ -434,7 +434,7 @@
     <p>
       Que cada uno escriba en un papel las dificultades que encuentra en su
       crecimiento y las poga en la cartelera, junto al dibujo que le parezca que
-      se relaciona y explique por qué lo relacio- na. Ayudar al grupo a buscar
+      se relaciona y explique por qué lo relaciona. Ayudar al grupo a buscar
       el significado de las dificultades que van planteando
     </p>
     <p>Se plantean posibles significados de los dibujos:</p>
@@ -496,7 +496,7 @@
     <ul>
       <li>
         - A continuación plantear las siguientes preguntas, primero para
-        contestarlas individualmen- te y luego ponerlas en común en el grupo.
+        contestarlas individualmente y luego ponerlas en común en el grupo.
       </li>
       <li>- ¿Tiene algo que ver esta canción con lo que están viviendo?</li>
       <li>- ¿Qué interrogantes les plantea?</li>
@@ -515,7 +515,7 @@
     <p>
       Qué comenten de a dos como se sienten "vistos" por los demás. Es
       importante que no tengan miedo al decir cosas que ellos escuchan de los
-      adultos (padres, profesores, amigos, sacerdo- tes, radios, televisión,
+      adultos (padres, profesores, amigos, sacerdotes, radios, televisión,
       etc.) cuando hablan sobre ellos (o los adolescentes en general).
     </p>
     <h3>- Reﬂexión:</h3>
@@ -599,7 +599,7 @@
     <p>colchonetas.Hacer silencio o poner una suave música de fondo.</p>
     <p>
       Con voz clara y pausada, ir pronunciando algunas frases para animar la
-      relajación. Te deja- mos algunos ejemplos para que las utilices.
+      relajación. Te dejamos algunos ejemplos para que las utilices.
     </p>
     <p>
       "Cerrá los ojos, serenáte y recorré los miembros de tu cuerpo. Sentí como
@@ -679,7 +679,7 @@
     </p>
     <p>
       Ser artífices significa ser creadores y protagonistas, implica tomar
-      decisiones y elegir el ca- mino de la vida de cada uno.
+      decisiones y elegir el camino de la vida de cada uno.
     </p>
     <h3>- Darles una copia de la "Carta a Jesús"</h3>
     <h3>Carta a Jesús</h3>
@@ -705,7 +705,7 @@
     <ul>
       <li>
         - Que cada uno subraye las frases que más le llegan o con las que se
-        siente identificado y lue- go poner en común las frases elegidas.
+        siente identificado y luego poner en común las frases elegidas.
       </li>
     </ul>
     <h3>ACTIVIDAD N° 5: MÁS ME TURBO</h3>
@@ -746,7 +746,7 @@
     <p>
       Rodrigo: No sé... Creo que la sexualidad es algo serio... No es para
       jugar. No podés hacer con tu sexo lo que se "te canta". Además, por lo que
-      ustedes decían, pareciera que si no te mastur- bás sos un anormal o un
+      ustedes decían, pareciera que si no te masturbás sos un anormal o un
       enfermo.
     </p>
     <p>Soledad: Bueno, no es para tanto.</p>
@@ -757,7 +757,7 @@
     <p>
       Rodrigo: Que todos hagan algo no hace que ese algo sea bueno o lícito, o
       normal. En un país corrupto la mayoría puede estar afanando; pero eso no
-      justifica que vos afanes. La mastur- bación puede ser un fenómeno muy
+      justifica que vos afanes. La masturbación puede ser un fenómeno muy
       difundido entre los adolescentes. Esto hace que sea un
     </p>
     <p>
@@ -773,7 +773,7 @@
     <h3>- Reﬂexión:</h3>
     <p>
       Poner en común la: reﬂexión realizada. Invitar a profundizar y a clarificar
-      las ideas fundamen- tales del tema, presentando frases que sintetizan los
+      las ideas fundamentales del tema, presentando frases que sintetizan los
       aspectos principales.
     </p>
     <p>Pueden ayudar las siguientes preguntas:</p>
@@ -798,7 +798,7 @@
       La masturbación es una práctica sexual que consiste en la provocación del
       orgasmo genital mediante cualquier procedimiento solitario, generalmente
       de tipo manual y que se presenta como fenómeno frecuente sobre todo en los
-      primeros años de la adolescencia. A pesar de la fre- cuencia con que se
+      primeros años de la adolescencia. A pesar de la frecuencia con que se
       presenta la masturbación en el adolescente, ella no es una etapa obligada.
     </p>
     <p>
@@ -808,11 +808,11 @@
       debe ser un fenómeno de transición, una manifetación de pasaje en el
       camino hacia modelos de sexualidad más madura. Es importante no quedar
       fijado en esa etapa masturbatoria y autoerótica, porque esa fijación produce
-      trastor- nos importantes en la vida sexual futura.
+      trastornos importantes en la vida sexual futura.
     </p>
     <p>
       La masturbación es una función incompleta porque el placer es genital,
-      peneano o clitoria- no, más bien localizado que general y con exclusión de
+      peneano o clitoriano, más bien localizado que general y con exclusión de
       la eventual capacidad generativa.
     </p>
     <p>
@@ -844,7 +844,7 @@
       inferioridad muy dependientes de los adultos, egocéntrico, introvertido,
       con frondosas fantasías compensadoras que reactivan aún más el hábito
       masturbatorio. Estas particularidades de introversión, de aislamiento, de
-      soledad, de egocentrismo y ensimisma- miento no pueden pasar inadvertidas.
+      soledad, de egocentrismo y ensimismamiento no pueden pasar inadvertidas.
     </p>
     <p>Responder entre todos:</p>
     <ul>
@@ -897,7 +897,7 @@
       </li>
       <li>
         - Al terminar reunirse todos e intercambiarse el mate cocido y servirlo
-        sin dar muchas expli- caciones.- Cuando todos se den cuenta del mal
+        sin dar muchas explicaciones.- Cuando todos se den cuenta del mal
         estado del mate, plantear:
       </li>
       <li>>> ¿Por qué pasó esto?</li>
