--- a/src/09-perdon.html
+++ b/src/09-perdon.html
@@ -25,7 +25,7 @@
         <em
           >Señal de maduración de la persona es su apertura hacia los demás. La
           amistad Fraterna es considerada, por eso mismo, como una meta en la
-          vida de toda comuni- dad exploradoril y como fruto de una auténtica
+          vida de toda comunidad exploradoril y como fruto de una auténtica
           vida de familia.</em
         >
       </li>
@@ -53,7 +53,7 @@
     <p>
       Los rastreadores-hogueras se encuentran divididos entre ellos en
       subgrupos. Esos sugrupos reﬂejan el rencor, la rivalidad, el maltrato y la
-      falta de perdón entre algunos explorado- res debido a heridas del pasado
+      falta de perdón entre algunos exploradores debido a heridas del pasado
       que no fueron sanadas.
     </p>
     <p>
@@ -82,7 +82,7 @@
       permite admitir los errores propios y ser lo suficientemente conscientes de
       que no somos jueces sino hermanos entre nosotros e hijos de un mismo Dios
       que nos ama, no abraza y nos perdona. La alegría de sentirnos perdonados y
-      perdonar siem- pre nos traen la paz.
+      perdonar siempre nos traen la paz.
     </p>
     <h2>TU MOMENTO</h2>
     <p>“¿Y a vos que te pasa con este tema?”</p>
@@ -174,21 +174,21 @@
     </p>
     <h2>OBJETIVOS CUMPLIDOS</h2>
     <p>
-      Los rastreadores- hogueras descubrieron el valor del perdón como base para
+      Los rastreadores-hogueras descubrieron el valor del perdón como base para
       vivir relaciones humanas profundas.
     </p>
     <p>
-      Los rastreadores- hogueras recuperaron el sentido del sacramento de la
+      Los rastreadores-hogueras recuperaron el sentido del sacramento de la
       reconciliación como signo de arrepentimiento, perdón y ternura de un Dios
       que los ama.
     </p>
     <p>
-      Los rastreadores- hogueras comenzaron a crecer en humildad para reconocer
+      Los rastreadores-hogueras comenzaron a crecer en humildad para reconocer
       los propios
     </p>
     <p>errores, pedir disculpas y cambiar sus actitudes.</p>
     <p>
-      Los rastreadores- hogueras comenzaron a perdonar con mayor facilidad,
+      Los rastreadores-hogueras comenzaron a perdonar con mayor facilidad,
       aceptando que los demás también pueden equivocarse y cambiar.
     </p>
     <h2>ACTIVIDADES</h2>
@@ -266,7 +266,7 @@
     </ul>
     <p>
       Organizarse con uno o más sacerdotes e invitar a los chicos que quieran
-      reconciliarse, mien- tras se acompaña al resto con oraciones, canciones y
+      reconciliarse, mientras se acompaña al resto con oraciones, canciones y
       exámenes de conciencia.
     </p>
     <p>Luego plantear:</p>
@@ -323,7 +323,7 @@
     </p>
     <p>
       El perdón es motivo de alegría, de fiesta, nos devuelve la paz. Dios nos da
-      su abrazo de Pa- dre. Nuestras manos sirven para reconciliarnos y
+      su abrazo de Padre. Nuestras manos sirven para reconciliarnos y
       abrazarnos nuevamente.
     </p>
     <p>
@@ -373,13 +373,13 @@
     <p>
       Los que no tienen amor no son capaces de perdonar, y no sienten deseos de
       mejorar una amistad deteriorada. Si guardás en tu corazón rencores o
-      venganzas es porque tenés que cre- cer en el amor. De otra forma, en vez
+      venganzas es porque tenés que crecer en el amor. De otra forma, en vez
       de acercarse, se alimentan las divisiones y se aumentan
     </p>
     <p>las distancias.</p>
     <p>
       Si sos capaz de reconocer que te equivocás y alguna vez supiste pedir
-      perdón, entendé tam- bién que los otros pueden equivocarse y que desean
+      perdón, entendé también que los otros pueden equivocarse y que desean
       que los perdones sinceramente.
     </p>
     <p>
@@ -525,12 +525,12 @@
     <p>Comenzar la celebración cantando</p>
     <p>
       Poner en la mochila algunas cosas típicas que se llevan para una salida de
-      amigos (Elemen- tos para divertirse, cuidarse, comer, cantar, abrigarse,
+      amigos (Elementos para divertirse, cuidarse, comer, cantar, abrigarse,
       regalar, etc.)
     </p>
     <p>
       A medida que se van colocando relacionar con lo que significan o permiten:
-      Amistad, com- partir, diálogo, responsabilidad, alegría.
+      Amistad, compartir, diálogo, responsabilidad, alegría.
     </p>
     <p>
       Colocársela a alguno de los chicos y turnándose entre todos para llevarla
@@ -594,7 +594,7 @@
     <h3>- Orientaciones:</h3>
     <p>
       La actividad pretende que los rastreadores-hogueras tomen la iniciativa a
-      la hora de reconci- liarse con otras personas.
+      la hora de reconciliarse con otras personas.
     </p>
     <h3>- Actividad:</h3>
     <p>
@@ -651,7 +651,7 @@
     <h3>- Orientaciones:</h3>
     <p>
       La actividad pretende que los rastreadores-hogueras tomen la iniciativa a
-      la hora de reconci- liarse con otras personas.
+      la hora de reconciliarse con otras personas.
     </p>
     <h3>- Actividad:</h3>
     <p>
@@ -694,7 +694,7 @@
       En ronda conversamos con el grupo acerca de cuáles son los principales
       aprendizajes que pueden sacar de lo trabajado durante esta consigna. Les
       pedimos que compartan una situación de sus vidas donde se haya presentado
-      un conﬂic- to y luego haya habido una reconciliación o aún no se haya
+      un conﬂicto y luego haya habido una reconciliación o aún no se haya
       producido.
     </p>
     <h3>- Se reza y se celebra:</h3>
