--- a/src/10-respeto.html
+++ b/src/10-respeto.html
@@ -271,7 +271,7 @@
       </li>
       <li>
         - A su vez reﬂexionaron acerca de la importancia de poder ubicarse
-        contextualmente y relacio- narse con respeto a los demás.
+        contextualmente y relacionarse con respeto a los demás.
       </li>
       <li>
         - Reconocieron la relevancia de no discriminar, ni hacer diferencias con
@@ -317,7 +317,7 @@
       <li>
         - ¿Hasta dónde se puede festejar, jugar o cargar con eso? Distinguir
         entre tener una identidad o simpatía y tener actitudes de violencia o
-        falta de respe- to. Destacar la importancia de tener límites y no
+        falta de respeto. Destacar la importancia de tener límites y no
         pasarse de ellos.
       </li>
     </ul>
@@ -335,7 +335,7 @@
         principales religiones. Presentar breves relatos de personalidades de
         otras religiones o referentes locales como por ejemplo algún rabino
         pastor. Distinguir de las sectas y otros movimientos espirituales con
-        características cerradas y pro- puestas anti-humanas.
+        características cerradas y propuestas anti-humanas.
       </li>
     </ul>
     <p>Volver a los mapas y repasar ahora las instituciones de bien público.</p>
@@ -437,7 +437,7 @@
     </p>
     <p>
       Existen muchos caminos para hacer el bien a los demás. Hay que aprender a
-      respetar a quie- nes lo hacen desde su lugar y a su manera.
+      respetar a quienes lo hacen desde su lugar y a su manera.
     </p>
     <p>
       En nuestro estilo de "educación en el tiempo libre" y de "vida en contacto
@@ -461,7 +461,7 @@
         y yo en ti, que también ellos sean uno en nosotros, para que el mundo
         crea que tú me enviaste. Yo les he dado la gloria que tú me diste, para
         que sean uno, como nosotros somos uno yo en ellos y tú en mí– para que
-        sean perfecta- mente uno y el mundo conozca que tú me has enviado, y que
+        sean perfectamente uno y el mundo conozca que tú me has enviado, y que
         yo los amé cómo tú me amaste.»</em
       >
     </p>
@@ -490,7 +490,7 @@
     <p>Ponerse de acuerdo en los personajes.</p>
     <p>
       Ubicar a todos en sus lugares y realizar la apertura del juicio,
-      comenzando con las presen- taciones.Lo más importante no es el resultado
+      comenzando con las presentaciones.Lo más importante no es el resultado
       final sino las argumentaciones de cada uno.
     </p>
     <p>
@@ -520,7 +520,7 @@
       </li>
       <li>
         • El juez, que conviene que sea el animador del grupo, que tiene que ir
-        manejando los tiem- pos y dando la palabra a los abogados.
+        manejando los tiempos y dando la palabra a los abogados.
       </li>
     </ul>
     <p>
@@ -542,7 +542,7 @@
     <ul>
       <li>
         • El juez puede decir que él no va a dar el veredicto, sino que lo va a
-        decir alguien más impor- tante, entonces leer el Evangelio y sin más
+        decir alguien más importante, entonces leer el Evangelio y sin más
         explicaciones dar por terminado el juicio.
       </li>
       <li>
@@ -721,7 +721,7 @@
     <h3>- Reﬂexión:</h3>
     <p>
       Hay juegos en los que unos ganan y otros pierden, y eso está bien siempre
-      y cuando se respe- te a los adversarios y se respeten las reglas.
+      y cuando se respete a los adversarios y se respeten las reglas.
     </p>
     <p>
       Además, el que gana tiene que aprender a no burlarse del otro y el que
@@ -730,7 +730,7 @@
     <p><strong>Ganar a cualquier precio:</strong></p>
     <p>
       En todo momento podemos elegir entre "pasar por encima" del otro con tal
-      de ganar o respe- tar a los demás sin que importe tanto el resultado.
+      de ganar o respetar a los demás sin que importe tanto el resultado.
     </p>
     <p>
       En la vida real también hay personas que hacen cualquier cosa por que les
@@ -743,7 +743,7 @@
     <p>
       No tiene sentido que unos pocos "ganen" si para eso tuvieron que
       "destruir" a los otros. Es preferible que todos puedan conseguir de buenas
-      maneras un poco, antes que algunos obten- gan de mala manera casi todo y
+      maneras un poco, antes que algunos obtengan de mala manera casi todo y
       que la mayoría quede con casi nada.
     </p>
     <p><strong>Muchas formas de faltar el respeto:</strong></p>
@@ -799,7 +799,7 @@
       A través de una actividad disparadra, en parejas o pequeños grupos,
       deberán armar una pequeña construcción con materiales que pueda
       facilitárseles y representar algún artículo que hayan seleccionado al
-      azar. Reﬂexio- namos brevemente sobre lo trabajado.
+      azar. Reﬂexionamos brevemente sobre lo trabajado.
     </p>
     <h3>- Actividad:</h3>
     <p>
@@ -950,7 +950,7 @@
     <p>Ayudarlos con alguna sugerencia para los artículos más complejos.</p>
     <p>
       Cada pareja muestra lo que hizo y ayudados por gestos o movimientos con
-      las mismas cons- trucciones, pero sin hablar, tiene que contarles a los
+      las mismas construcciones, pero sin hablar, tiene que contarles a los
       demás sobre su artículo.
     </p>
     <p>
@@ -963,7 +963,7 @@
       <li>- ¿Se respetan estos derechos?</li>
       <li>
         - ¿Hay gente que los defiende? Presentar el relato de "Respeto de los
-        Derechos Humanos" que cuenta la historia de las Ma- dres de Plaza de
+        Derechos Humanos" que cuenta la historia de las Madres de Plaza de
         Mayo.
       </li>
     </ul>
@@ -1074,7 +1074,7 @@
     <p>
       Hay muchas personas que, a su manera, desde sus convicciones, en su lugar
       y con su gente han dedicado su vida con el mismo ideal de defender la
-      dignidad de las personas: sus Dere- chos Humanos.
+      dignidad de las personas: sus Derechos Humanos.
     </p>
     <p>
       Hay algunos más "famosos" que su vida es conocida en general y muchos
