--- a/src/12-fe.html
+++ b/src/12-fe.html
@@ -51,7 +51,7 @@
       Para “consolidar el camino” es bueno generar nuevas seguridades. Los
       rastreadores-hoguras crecieron en edad, desarrollo físico y conocimiento
       desde que entraron en el Batallón. Es necesario acompañar este crecimiento
-      exterior -que se da por naturaleza- con un crecimiento interior que los
+      exterior -que se da por naturalezacon un crecimiento interior que los
       ayude a madurar sus propias creencias, romper con algunos tabúes y miedos,
       para reconstruir nuevas seguridades más maduras que los ayuden a crecer
       “desde adentro hacia afuera” y afirmarse en Jesús a lo largo de sus vidas.
@@ -129,7 +129,7 @@
     <h2>OBJETIVOS CUMPLIDOS</h2>
     <p>
       Los rastreadores-hogueras lograron descubrir una imagen de Dios libre de
-      prejuicios y fal- sas concepciones.
+      prejuicios y falsas concepciones.
     </p>
     <p>
       Los rastreadores-hogueras pudieron incorporar la necesidad de tener una fe
@@ -138,7 +138,7 @@
     </p>
     <p>
       Los rastreadores-hogueras comenzaron a vivir la fe desde un compromiso
-      concreto y cohe- rente reconociendo a Dios en lo cotidiano.
+      concreto y coherente reconociendo a Dios en lo cotidiano.
     </p>
     <h2>ACTIVIDADES</h2>
     <p>
@@ -152,7 +152,7 @@
     <h3>- Orientaciones:</h3>
     <p>
       La actividad busca que los rastreadores-hogueras puedan reconocer la
-      presencia de Dios du- rante las actividades que llevan a cabo diariamente.
+      presencia de Dios durante las actividades que llevan a cabo diariamente.
     </p>
     <h3>- Actividad:</h3>
     <p>
@@ -194,7 +194,7 @@
       creyente y comprometida de los acontecimientos y la presencia de Dios en
       ellos. Es una verdadera expresión de la fe comunitaria. Hoy, su
       intepretación y discernimiento comunitario nos permiten comprender la
-      realidad desde la profun- didad de su misterio dentro del proyecto de
+      realidad desde la profundidad de su misterio dentro del proyecto de
       Dios.
     </p>
     <p>
@@ -281,14 +281,14 @@
       Iluminados por el Espíritu tenemos que reconocer a un Dios que camina con
       nosotros y nos acompaña. Recorriendo las páginas de la Biblia, recordando
       nuestras creencias y tradiciones, revisando nuestros valores y opciones,
-      encontraremos las imágenes de Dios que nos parez- can las más verdaderas y
+      encontraremos las imágenes de Dios que nos parezcan las más verdaderas y
       las más llenas de vida.
     </p>
     <p>
       Descubrir nuevas formas de ver las cosas es comenzar a transformar una
       realidad. Reconocamos juntos y mostremos la imagen del Dios en el que
       creemos. Podemos verlo, llamarlo y sentirlo de muchas maneras en las
-      situaciones de nuestra vida. De acuerdo a ellas será nues- tra forma de
+      situaciones de nuestra vida. De acuerdo a ellas será nuestra forma de
       vivir la fe, de compartirla en el grupo, de construir y anunciar el Reino
       de Dios.
     </p>
@@ -304,7 +304,7 @@
       Si creemos en un Dios que es amor, busquemos en qué personas descubrimos
       el amor (papá, mamá, esposo/a). Si creemos en un Dios cercano, pensemos en
       qué personas nos acompañan de cerca (amigos, educadores, mayores). Y así
-      podemos seguir con un Dios que es justo, tra- bajador, paciente, fuerte,
+      podemos seguir con un Dios que es justo, trabajador, paciente, fuerte,
       seguro, fiel, tierno, creador, etc.
     </p>
     <p>Cómo es Jesús:</p>
@@ -320,7 +320,7 @@
     </p>
     <p>
       Ama a su madre, a los pobres, a los tristes, a las mujeres que lo
-      acompañan y a la muchedum- bre que camina como ovejas sin pastor.
+      acompañan y a la muchedumbre que camina como ovejas sin pastor.
     </p>
     <p>Llora ante la muerte de su amigo Lázaro.</p>
     <p>Se indigna con los fariseos por su hipocresía y estrechez de corazón.</p>
@@ -435,7 +435,7 @@
     </p>
     <p>
       <strong>Portada:</strong> Que convida a entrar, que permite abrirnos paso,
-      que comunica, que se abre a nue- vos espacios.
+      que comunica, que se abre a nuevos espacios.
     </p>
     <p>
       <strong>Mate:</strong> Que une, que se comparte, que invita a dialogar,
@@ -559,7 +559,7 @@
     <h3>- Orientaciones:</h3>
     <p>
       La actividad procura que los rastreadores-hogueras vean de qué manera
-      sintieron la presen- cia de Dios en los momentos más difíciles de su vida
+      sintieron la presencia de Dios en los momentos más difíciles de su vida
       y de la vida del grupo.
     </p>
     <h3>- Actividad:</h3>
@@ -631,7 +631,7 @@
     <h3>- Orientaciones:</h3>
     <p>
       La actividad busca descubrir cómo el Espíritu Santo anima al grupo y a
-      cada uno de los ras- treadores-hogueras en sus labores cotidianas.
+      cada uno de los rastreadores-hogueras en sus labores cotidianas.
     </p>
     <h3>- Actividad:</h3>
     <p>
@@ -682,7 +682,7 @@
         algunos gusanitos que si bien a primera vista molestan con el tiempo se
         convierten en mariposas, como todos aquellos problemas que transformamos
         en desafíos. Somos ﬂores muy diferentes, las hay de todos de todos los
-        colores, tamaños, formas y perfu- mes, pero todos pasamos por los mismos
+        colores, tamaños, formas y perfumes, pero todos pasamos por los mismos
         inviernos y primaveras y convivimos bajo el mismo
       </li>
     </ul>
@@ -696,7 +696,7 @@
     <p>
       Una mañana estaba caminando por el jardín cuando de pronto vio una ﬂor que
       asomaba entre un matorral. Se acercó, la observó lentamente, olió su
-      perfume, estiró su mano y suave- mente la cortó.
+      perfume, estiró su mano y suavemente la cortó.
     </p>
     <p>
       El jardinero camina y mira a cada ﬂor y con una sensibilidad muy especial
@@ -706,7 +706,7 @@
     <p>
       Cada ﬂor tiene su hora y su tiempo que sólo el jardinero conoce. Cada
       persona tiene su vida y su muerte enteramente en manos de Dios. Que con el
-      tiempo no perdamos nuestra fe y nues- tra esperanza
+      tiempo no perdamos nuestra fe y nuestra esperanza
     </p>
     <p>
       ¡Que no esté marchite nuestra ﬂor cuando el jardinero venga a buscarnos!
