--- a/src/13-conciencia.html
+++ b/src/13-conciencia.html
@@ -39,12 +39,12 @@
       </li>
       <li>
         - Su desarrollo social está relacionado con el desarrollo de la
-        emotividad, las modificacio- nes psicológicas y las actividades
+        emotividad, las modificaciones psicológicas y las actividades
         intelectuales.
       </li>
       <li>
         - Suele suceder que la indiferencia va generando en ellos un
-        acostumbramiento y un ador- mecimiento de la conciencia frente a la
+        acostumbramiento y un adormecimiento de la conciencia frente a la
         realidad cada vez más injusta.
       </li>
     </ul>
@@ -120,7 +120,7 @@
     </p>
     <p>
       Tener conciencia ayuda a transformar vidas y transformar una vida también
-      puede transfor- mar la tuya y la de tus pibes.
+      puede transformar la tuya y la de tus pibes.
     </p>
     <h2>TEXTO PARA REFLEXIONAR Y ORIENTAR EL TRABAJO</h2>
     <h3>- San Lucas 21, 1-4 “La ofrenda de la viuda pobre”</h3>
@@ -167,7 +167,7 @@
     </p>
     <p>
       Entonces como animador y exploradores que somos, esta gran obra de la
-      viuda se puede tradu- cir en dar mi tiempo al escuchar con atención,
+      viuda se puede traducir en dar mi tiempo al escuchar con atención,
       acompañar, ayudar, agradecer y servir a los demás.
     </p>
     <h2>ENTENDIÉNDOLOS:</h2>
@@ -235,7 +235,7 @@
       enmeraciones de elementos, ordenar según prioridades, afirmaciones para
       decidirse por verddero o falso. Es conveniente tener una ficha impresa con
       las preguntas y espacio para las diferentes repuestas (las preguntas sobre
-      el margen izquierdo y varias columnas en blanco para las res- puestas de
+      el margen izquierdo y varias columnas en blanco para las respuestas de
       cada persona).
     </p>
     <p>Algunos ejemplos pueden ser:</p>
@@ -252,7 +252,7 @@
       </li>
       <li>
         • ¿En qué medida cree que la parroquia cumple con su misión? (Nada,
-        Poco, Aceptable, Mu- cho, Totalmente).
+        Poco, Aceptable, Mucho, Totalmente).
       </li>
     </ul>
     <p>
@@ -363,7 +363,7 @@
       del Estado, falta de salud, inseguridad, dentro de estas situciones
       globales, aparecen los rostros de las personas que las viven y las sufren:
       Padres de familia que no tienen para alimentar a sus hijos, niños que
-      mueren de enfermedades perfec- tamente evitables, jóvenes que no
+      mueren de enfermedades perfectamente evitables, jóvenes que no
       encuentran de qué trabajar y ganarse la vida, personas
     </p>
     <p>
@@ -386,7 +386,7 @@
       manifiesta y se une con nosotros, desde allí nos salva y nos redime de toda
       esclavitud, desde allí nos hace hermanos suyos e hijos de Dios, desde allí
       nos hace herencia suya y pueblo suyo, desde allí nos moviliza para que
-      cons- truyamos juntos su Reino, aquí en este presente y hacia el futuro de
+      construyamos juntos su Reino, aquí en este presente y hacia el futuro de
       nuestros hijos.
     </p>
     <p>
@@ -446,7 +446,7 @@
       Hasta cierto momento de su vida, Don Bosco no conocía más que la pobreza
       del campo. No sabía qué es la miseria de los suburbios de las grandes
       ciudades. Al llegar a la ciudad Don Cfasso le dice «Ve, mira a tu
-      alrededor y actúa." Ya en los primeros domingos anduvo por la ciu- dad,
+      alrededor y actúa." Ya en los primeros domingos anduvo por la ciudad,
       para hacerse una idea sobre las condiciones morales en las que se movían
       los jóvenes.
     </p>
@@ -470,7 +470,7 @@
       manos. Eran los lobos, los animales salvajes de sus sueños, aún cuando en
       sus ojos había más miedo que ferocidad. Hay bandas de jóvenes que vagan
       especialmente los domingos, por las calles y por las orillas de Po.
-      Contemplaban a las personas perfumadas y de fiesta, que pa- sean sin hacer
+      Contemplaban a las personas perfumadas y de fiesta, que pasean sin hacer
       caso de su miseria. Las familias obreras suben a las buhardillas por la
       noche.
     </p>
@@ -490,7 +490,7 @@
     <p>
       Presentar las respuestas de Don Bosco a esa situación,
       <strong
-        >leyendo el texto de "Urgencia y dis- ponibilidad por los
+        >leyendo el texto de "Urgencia y disponibilidad por los
         jóvenes".</strong
       >
     </p>
@@ -522,7 +522,7 @@
       </li>
       <li>
         • Les lleva a descubrir y valorar la dignidad de su vida, y la dignidad
-        que viene del compro- miso y el trabajo.
+        que viene del compromiso y el trabajo.
       </li>
     </ul>
     <p>Comparar nuevamente las dos épocas y plantear:</p>
@@ -620,7 +620,7 @@
     <h3>- Orientación:</h3>
     <p>
       Esta actividad busca que los Rastreadores/Hogueras distingan la diferencia
-      de dar y compar- tir, de identificar que no es lo mismo dar lo que sobra
+      de dar y compartir, de identificar que no es lo mismo dar lo que sobra
       que lo que hace falta.
     </p>
     <h3>- Actividad:</h3>
@@ -659,7 +659,7 @@
     </p>
     <p>
       Don Bosco adopta un esquema sencillo para razonar con los ricos y
-      acaudalados que le tie- nen que ayudar. En una oportunidad les predica:
+      acaudalados que le tienen que ayudar. En una oportunidad les predica:
     </p>
     <p>
       "Los pobres corren el peligro de ser arrastrados por la revolución, porque
@@ -671,7 +671,7 @@
     </p>
     <p>
       Desencadenarán la revolución que acarreará el desorden y la violencia.
-      Todo esto será pro- vocado por la insensibilidad de los ricos que no han
+      Todo esto será provocado por la insensibilidad de los ricos que no han
       querido ayudarles a salir de la miseria."
     </p>
     <p><strong>Necesidades y deseos: Beneficencia o justicia:</strong></p>
@@ -686,7 +686,7 @@
       sobrevivir. Sin la plata" o "no puedo"; con ese criterio el rico embargo,
       pronto se dieron cuenta que la btendría que comprarse todo lo que quisiera
       y neficencia no bastaba; era preciso luchar por eso no está bien: cuando
-      hay personas (y mu- la justicia social, por instituciones y leyes que
+      hay personas (y mula justicia social, por instituciones y leyes que
       chas) que no tienen para lo más mínimo, los garantizaran los derechos
       humanos. gastos superﬂuos no están de acuerdo con el Esta opción tiene dos
       momentos que no proyecto de Dios. Hay que preguntarse si es pueden ser
@@ -695,7 +695,7 @@
       particular. pobres, porque se les está yendo la vida, por-
     </p>
     <p>
-      Las diferencias entre lo necesario y lo su- que ellos no pueden esperar y
+      Las diferencias entre lo necesario y lo suque ellos no pueden esperar y
       por otro la prperﬂuo son difíciles de precisar y es fruto de moción humana
       que conduce a descubrir los un largo proceso de maduración y de sensi-
       mecanismos que generan estas situaciones e
@@ -706,14 +706,14 @@
     </p>
     <p>
       Seguramente hay muchas cosas a las que nes es un elemento fundamental para
-      la prnos atamos y parecería que no se puede vi- vención y superación de
+      la prnos atamos y parecería que no se puede vivención y superación de
       las nuevas pobrezas vir sin ellas, y cuando tomamos conciencia de y un
       aporte especifico y original que podemos la realidad las entendemos de otra
       manera y dar desde nuestro carisma salesiano. nos despojamos de ellas.
       Olvidar, abandonar o negar el vínculo entre
     </p>
     <p>
-      Así como en la cuaresma el ayuno se hace li- lo estructural y lo personal;
+      Así como en la cuaresma el ayuno se hace lilo estructural y lo personal;
       lo objetivo con lo mosna. La austeridad se traduce en solidaridad.
       subjetivo, lo cultural con lo económico-social
     </p>
@@ -737,7 +737,7 @@
         conscientes de los mecanismos de la ideología capitalista, su inﬂuencia
         en la vida y discernirla desde el Evangelio de Jesucristo que propone el
         Reino de Dios sin excluidos, donde los bienes se distribuyen según las
-        necesida- des y todos pueden vivir en dignidad.
+        necesidades y todos pueden vivir en dignidad.
       </li>
     </ul>
     <p>
@@ -759,12 +759,12 @@
     </p>
     <p>
       No debemos estar ajenos a todo aquello que interfiera en el buen vivir, el
-      Explorador debe ana- lizar siempre desde la "óptica cristiana", toda
+      Explorador debe analizar siempre desde la "óptica cristiana", toda
       aquella situación que desvíe sus sanos intereses.
     </p>
     <p>
       Debe demostrar amor a la Patria respetando las leyes, cumpliendo con sus
-      obligaciones dia- rias, ayudando al progreso, sembrando en sus hijos el
+      obligaciones diarias, ayudando al progreso, sembrando en sus hijos el
       amor a la cultura de su país.
     </p>
     <p>
