--- a/src/14-critica.html
+++ b/src/14-critica.html
@@ -30,7 +30,7 @@
       por cultivar una educación personalizada, personalizante y liberadora.
       <strong>Inc. 40.</strong> Tiene siempre presentes sus objetivos
       fundamentales, para hacer de cada miembro un sujeto activo de su propia
-      historia y educación, y responsable al mismo tiempo de la edu- cación de
+      historia y educación, y responsable al mismo tiempo de la educación de
       los demás en espíritu de comunidad y familia.
     </p>
     <h2>ELECCIÓN DE LA CONSIGNA:</h2>
@@ -123,7 +123,7 @@
         sociedades cada vez más individualistas, entregar la vida cotidianamente
         como lo hizo Jesús sigue siendo una propuesta que va a cotramano.
         Invitamos a los animadores a ser críticos consigo mismo y pensar en qué
-        situaciones se ven ex- puestos a dejarse llevar por la comodidad y el
+        situaciones se ven expuestos a dejarse llevar por la comodidad y el
         aplauso de los demás, en lugar de seguir a Jesús.
       </li>
     </ol>
@@ -159,7 +159,7 @@
     <p>
       La actividad pretende provocar la curiosidad, romper con el sentido común
       y despertar el epíritu crítico a través de la problematización y el
-      cuestionamiento de situaciones que los ras- treadores-hogueras
+      cuestionamiento de situaciones que los rastreadores-hogueras
       experimentan en su vida cotidiana.
     </p>
     <h3>- Actividad:</h3>
@@ -213,7 +213,7 @@
     <p>
       Es cierto también que todos contamos con una base mínima que proviene de
       una conciencia natural, pero que no es confiable ni única. Es precisamente
-      en el análisis crítico donde encon- traremos las diferencias más fuertes.
+      en el análisis crítico donde encontraremos las diferencias más fuertes.
     </p>
     <p>
       Es necesario crear una conciencia crítica sana, es decir tener
@@ -232,7 +232,7 @@
     <p>
       Reconocer la voz de Jesús hoy, en medio de tantas otras "voces" no es
       tarea fácil. Descifrar entre tantos mensajes lo que es auténtico y ser
-      capaces de seguir a Jesús entre tantas pro- puestas es un desafío que
+      capaces de seguir a Jesús entre tantas propuestas es un desafío que
       requiere mucha atención y criterio.
     </p>
     <p>
@@ -331,7 +331,7 @@
         acumular ganancias. Sus profetas los recbren con cal, proponiendo falsas
         visiones y predicciones engañosas. Ellos dicen: “Así habla el Señor”,
         cuando el Señor no había hablado. Los terratenientes practican la
-        extorsión, co- meten robos, explotan al pobre y al indigente, y
+        extorsión, cometen robos, explotan al pobre y al indigente, y
         atropellan al extranjero, con todo derecho.»</em
       >
     </p>
@@ -341,7 +341,7 @@
     </p>
     <p>
       Comenzar explicando quiénes eran los profetas y su misión de anunciar la
-      venida del Reden- tor, pidiéndole al pueblo que prepare su corazón
+      venida del Redentor, pidiéndole al pueblo que prepare su corazón
       superando las injusticias.
     </p>
     <p>
@@ -357,7 +357,7 @@
     </p>
     <p>
       Pedir por aquellas situaciones que son olvidadas y pocos tienen la actitud
-      crítica de denun- ciarlas para poder cambiarlas.
+      crítica de denunciarlas para poder cambiarlas.
     </p>
     <p>
       Relacionar con lo realizado en las actividades centrales y buscar un
