--- a/src/15-identidad.html
+++ b/src/15-identidad.html
@@ -44,7 +44,7 @@
     <p>
       Sienten un interés creciente y la necesidad de conocer al otro sexo, de
       explorar sus caraterísticas. Así surgen los “amigovios”, “amigos con
-      derechos,”“chapes”, “transas” etc... Mu- chas veces lo que sólo puede ser
+      derechos,”“chapes”, “transas” etc... Muchas veces lo que sólo puede ser
       un momento en el crecimiento se transforma en el fin último.
     </p>
     <h3>- Orientación:</h3>
@@ -61,7 +61,7 @@
     </p>
     <p>
       contestar es: ¿Quién soy yo? Esta búsqueda, y esta pregunta se intenta
-      responder mayoritaria- mente en la adolescencia, cuando el desarrollo
+      responder mayoritariamente en la adolescencia, cuando el desarrollo
       físico, cognitivo, social y emocional se elevan
     </p>
     <p>
@@ -131,7 +131,7 @@
         entender que estás trabajando con diferentes caracteres y que cada uno
         de tus adolescentes es un mundo diferente. Ellos están pasando por una
         de las etapas más difíciles en la vida y están experimentando muchos
-        cambios hor- monales y psicológicos.
+        cambios hormonales y psicológicos.
       </li>
       <li>
         - Ten Fe y la certeza de que Dios está contigo. Cree en los cambios de
@@ -150,7 +150,7 @@
       <em
         >«Mientras Jesús estaba en Jerusalén, en la fiesta de la Pascua, muchos
         creyeron en el al ver señles milagrosas que hacía. Pero Jesús no confiaba
-        en ellos, porque los conocía a todos. No necesi- taba que nadie le dijera
+        en ellos, porque los conocía a todos. No necesitaba que nadie le dijera
         nada acerca de la gente, pues el mismo conocía el corazón del
         hombre.»</em
       >
@@ -167,7 +167,7 @@
       ha anticipado a mi aparición en el mundo. Yo soy conocido por Dios, sabido
       por Dios; y solo este conocimiento de Dios, de Jesús, Hijo de Dios, es la
       inteligibilidad de mi ser. Existo por haber sido pensado, por ocupar un
-      sitio en el pensa- miento divino, del cual nunca he sido retirado.
+      sitio en el pensamiento divino, del cual nunca he sido retirado.
     </p>
     <h2>ENTENDIÉNDOLOS:</h2>
     <p>
@@ -196,7 +196,7 @@
     <p>
       <strong>Rapidez</strong> , porque la evolución, vertiginosa, se produce en
       un escaso tiempo, sin embargo, va a marcar de forma decisiva toda la
-      existencia. Pensemos por un momento cuantas repercusio- nes de importancia
+      existencia. Pensemos por un momento cuantas repercusiones de importancia
       tiene este corto período respecto al resto de la vida.
     </p>
     <p>
@@ -204,7 +204,7 @@
       cambios, cualitativos y cuantitativos, que se operan en todos los órdenes
       de la persona (físico, psicológico, cognitivo) y que generan conﬂictos o
       dificultades. Sobre todo "crisis de identidad", ya que se dan tales
-      transfor¬ma- ciones que el individuo tiene que reconstruir su propia
+      transformaciones que el individuo tiene que reconstruir su propia
       identidad, autoimagen y autoestima.
     </p>
     <p>
@@ -299,7 +299,7 @@
       busca a Mercedes y se desahoga a los golpes con ella. ¡Pobre mamá! Él
       maltrata a la madre por este rechazo que hace, pero Laura no puede aceptar
       en ninguna forma. Se leen en sus ojos el dolor y la desilusión. Pensaba
-      encon- trar en Manuel Mora un verdadero protector y en cambio ha dado con
+      encontrar en Manuel Mora un verdadero protector y en cambio ha dado con
       un tirano.
     </p>
     <p><strong>La entrega:</strong></p>
@@ -358,7 +358,7 @@
       pero esta vez en forma consciente y relacionada con la sexualidad
       erótica-genital. Al proponerse modelos socialmente valorados nace la
       imagen ideal del cuerpo. Pero cuando su realidad difiere de esa imagen
-      ideal el adolescente sufre decepciones, com- plejos y hasta resentimiento
+      ideal el adolescente sufre decepciones, complejos y hasta resentimiento
       contra su propio cuerpo.
     </p>
     <p>Aceptar el propio cuerpo significa:</p>
@@ -402,7 +402,7 @@
       porque la persona y la sexualidad son realidades íntimamente relacionadas,
       ya que toda la persona es sexuada, impregnando la sexualidad a su
       totalidad. Por ello, el carácter principal de la personalidad sana es una
-      sexualidad integrada en la glo- balidad de la persona.
+      sexualidad integrada en la globalidad de la persona.
     </p>
     <p>
       <strong>Multiplicar la vida:</strong> Flor de tema vinimos a elegir... Vos
@@ -519,7 +519,7 @@
       pero esta vez en forma consciente y relacionada con la sexualidad
       erótica-genital. Al proponerse modelos socialmente valorados nace la
       imagen ideal del cuerpo. Pero cuando su realidad difiere de esa imagen
-      ideal el adolescente sufre decepciones, com- plejos y hasta resentimiento
+      ideal el adolescente sufre decepciones, complejos y hasta resentimiento
       contra su propio cuerpo.
     </p>
     <p>Aceptar el propio cuerpo significa:</p>
@@ -562,7 +562,7 @@
       adecuada madurez sexual porque la persona y la sexualidad son realidades
       íntimamente relacionadas, ya que toda la persona es sexuada, impregnando
       la sexualidad a su totalidad. Por ello, el carácter principal de la
-      personalidad sana es una sexualidad integrada en la glo- balidad de la
+      personalidad sana es una sexualidad integrada en la globalidad de la
       persona.
     </p>
     <p><strong>Multiplicar la vida:</strong></p>
@@ -591,7 +591,7 @@
       De ninguna manera se pueden aceptar posiciones que los consideren como
       actos impuros en sí mismos. El peligro aparece cuando se mezclan conductas
       obsesivas, prejuicios, tabúes, vergüenzas, irresponsabilidad, que
-      desvirtúan el verdadero sentido de una sexualidad madu- ra basada en la
+      desvirtúan el verdadero sentido de una sexualidad madura basada en la
       pureza.
     </p>
     <p>
@@ -631,7 +631,7 @@
     </p>
     <p>
       Invitar a los que tienen letreros a que lo peguen en la silueta en que les
-      parezca que corres- ponde ponerlo. Leer los letreros que se han asociado a
+      parezca que corresponde ponerlo. Leer los letreros que se han asociado a
       cada sexo y comentar:
     </p>
     <ul>
@@ -648,7 +648,7 @@
       Luego solicitar que cada uno complete un cuadro indicando las distintas
       reacciones de un varón y de una mujer en las mismas situaciones. Enumerar
       algunas situaciones como ser ruptura de noviazgo, fracaso en examen,
-      organiza- ción de una salida, elección de novio/novia, relación de
+      organización de una salida, elección de novio/novia, relación de
       amistad, elección de una prenda de
     </p>
     <p>
@@ -712,7 +712,7 @@
       </tr>
       <tr>
         <td>Vive en el mundo de las personas, cuida de los seres vivos</td>
-        <td>Vive en el mundo de las cosas y tiende a trans- formarlas.</td>
+        <td>Vive en el mundo de las cosas y tiende a transformarlas.</td>
       </tr>
       <tr>
         <td>Vive en mundo cerrado de lo próximo y presente.</td>
@@ -731,7 +731,7 @@
       La sexualidad conlleva, ciertamente, unas diferencias biológicas que vos y
       todos saben apuntar, pero estas diferencias no se restringen a la posesión
       de órganos diversos en función de la procreación, sino que alcanzan a toda
-      célula. Estas diferencias hay que ir humanizán- dolas, desarrollándolas
+      célula. Estas diferencias hay que ir humanizándolas, desarrollándolas
       hasta la plenitud humana ya que en la persona humana no hay sola-
     </p>
     <p>
@@ -741,7 +741,7 @@
     </p>
     <p>
       Se constata cómo la sexualidad comporta igualmente diferencias
-      psicológicas, que depen- den también de la cultura de cada pueblo.
+      psicológicas, que dependen también de la cultura de cada pueblo.
     </p>
     <p>
       Durante la adolescencia surgen múltiples interrogantes, y de todo tipo.
@@ -768,7 +768,7 @@
     </p>
     <p>
       Dios creó al hombre varón y mujer "a propósito". Los creó tal cual son
-      pensando cuidadosa- mente en todas las característica propia de cada sexo,
+      pensando cuidadosamente en todas las característica propia de cada sexo,
       en lo psicológico, afectivo y en lo físico.
     </p>
     <p>"unirse para formar un sólo ser".</p>
@@ -844,7 +844,7 @@
       Aunque repartiera las pocas cosas que tengo o como un héroe entregara mi
       cuerpo a las llamas, si mi corazón no se aviva de quién está solo y triste
       y que mis manos no son para escucharlo, acompañarlo o animarlo, es porque
-      todavía estoy en el umbral de la puerta ima- ginando que estoy viviendo.
+      todavía estoy en el umbral de la puerta imaginando que estoy viviendo.
     </p>
     <p>
       Si no he aprendido que el amor verdadero es paciente, es servicial y no
@@ -909,7 +909,7 @@
     </p>
     <p>
       Te proponemos completar las siguientes frases a modo de evaluación del
-      trabajo de la con- signa.-La preparación de la consigna fue...
+      trabajo de la consigna.-La preparación de la consigna fue...
     </p>
     <ul>
       <li>
