--- a/src/16-obediencia.html
+++ b/src/16-obediencia.html
@@ -134,11 +134,11 @@
       </li>
       <li>
         - ¿Cómo sentimos nosotros la obediencia y la autoridad? Nos dejamos
-        acompañar por sacer- dotes, religiosos o laicos?
+        acompañar por sacerdotes, religiosos o laicos?
       </li>
       <li>
         - ¿Qué cosas aceptamos y cuáles cuestionamos de los adultos que tienen
-        algún tipo de res- ponsabilidad con nosotros?
+        algún tipo de responsabilidad con nosotros?
       </li>
     </ul>
     <p>
@@ -164,7 +164,7 @@
         como servicio. La búsqueda del bien común y una organizada convivencia.
         Evita injusticias y desigualdades. Señala los límtes, pero frena los
         abusos. Solamente cuando el animador ejerce una autoridad de estas
-        carac- terísticas, merece ser obedecido. Obediencia lograda por el
+        características, merece ser obedecido. Obediencia lograda por el
         respeto mutuo, jamás por el miedo.
       </li>
     </ul>
@@ -253,7 +253,7 @@
       </li>
       <li>
         <strong>6.</strong> En su interior, cada uno asume un papel de acuerdo a
-        la estructura feudal y debe interpre- tarlo a lo largo de toda la
+        la estructura feudal y debe interpretarlo a lo largo de toda la
         jornada.
       </li>
       <li>
@@ -272,7 +272,7 @@
       </li>
       <li>
         <strong>10.</strong> Intervenir lo menos posible dejando actuar y
-        motivando a que cada uno encarne su per- sonaje.
+        motivando a que cada uno encarne su personaje.
       </li>
     </ol>
     <ol>
@@ -324,12 +324,12 @@
       reúne con otros señores a hablar de política, comentar sus éxitos en la
       guerra y discutir los tributos y servicios que impondrán a sus siervos, a
       los que considera personas inferiores. Puede hacer lo que le venga la
-      gana, usando si quiere a su sier- vo con las únicas restricciones que le
+      gana, usando si quiere a su siervo con las únicas restricciones que le
       imponga el rey a quien debe respeto y lealtad.
     </p>
     <p>
       <strong>Criado:</strong> Usted es un criado y debe transmitir a los
-      siervos las órdenes de sus señores sin discu- tirlas. No puede participar
+      siervos las órdenes de sus señores sin discutirlas. No puede participar
       en ninguna actividad a menos que el rey o los señores lo autoricen.
     </p>
     <p>
@@ -399,7 +399,7 @@
     <h3>- Orientación:</h3>
     <p>
       La actividad busca que el Rastreador-Hoguera reﬂexione sobre sus propias
-      relaciones familia- res y las dificultades que conlleva la
+      relaciones familiares y las dificultades que conlleva la
       autoridad-obediencia en dicho ambiente.
     </p>
     <h3>- Actividad:</h3>
@@ -427,7 +427,7 @@
       </li>
       <li>
         <strong>5.</strong> Juntarse entre todos e intercambiar las hojas, de
-        manera que cada pareja quede nueva- mente con una hoja de un padre y una
+        manera que cada pareja quede nuevamente con una hoja de un padre y una
         de un hijo, pero escrita por diferentes parejas.
       </li>
       <li>
@@ -442,7 +442,7 @@
       </li>
       <li>
         <strong>8.</strong> Las parejas tienen que tratar de reconstruir uno de
-        los diálogos tal como fue escrito origi- nalmente.
+        los diálogos tal como fue escrito originalmente.
       </li>
       <li>
         <strong>9.</strong> No vale armar el diálogo que ellos mismos
@@ -492,7 +492,7 @@
       actos de amor. Nos encontramos con estas situaciones se producen por no
       saber expresar ese amor, porque sufrimos una crisis de amor. Para que esta
       crisis no se produzca Dios nos recuerda en el cuarto mandamiento "Honrar
-      pa- dre y madre".
+      padre y madre".
     </p>
     <p>
       <strong>Diálogo con los padres:</strong> Vemos que entre nosotros y
