--- a/src/17-solidaridad.html
+++ b/src/17-solidaridad.html
@@ -78,7 +78,7 @@
     <h3>- Dinámica:</h3>
     <p>
       Intentá hacer el ejercicio de enumerar las buenas acciones que realizaste
-      en las últimas sema- nas en las siguientes areas, según correspondan o no
+      en las últimas semanas en las siguientes areas, según correspondan o no
       a tu vida actual:
     </p>
     <ul>
@@ -233,7 +233,7 @@
       </li>
       <li>
         <strong>5.</strong> Analizar lo que como grupo pueden aportar para
-        revertir alguna de las necesidades descu- biertas.
+        revertir alguna de las necesidades descubiertas.
       </li>
       <li>
         <strong>6.</strong> A modo de sugerencia: Actividad Solidaria Sería más
@@ -250,7 +250,7 @@
         puede existir una posibilidad concreta de acción solidaria. -Puede ser
         que durante la semana junten juguetes, alimentos, útiles escolares o
         ropa para regalar personalmente o entregarlas a Cáritas u otra
-        institución solidaria para que la distri- buyan de manera más anónima.
+        institución solidaria para que la distribuyan de manera más anónima.
       </li>
     </ol>
     <h3>- Reﬂexión:</h3>
@@ -261,7 +261,7 @@
       por lo tanto sensibilizar nuestros corazones y renunciando a nosotros,
       llegar a los demás. Es necesario descubrir la realidad en la que vivimos
       para que sea posible hacer algo para modficarla, debemos ser conscientes de
-      que en todos los lugares en que nos movemos existen per- sonas que
+      que en todos los lugares en que nos movemos existen personas que
       necesitan de nuestra solidaridad y que siempre podemos hacer algo más por
       alguien.
     </p>
@@ -277,7 +277,7 @@
       una misión que es personal, intransferible; y que, si no la cumplimos,
       quedará sin cumplir y en nosotros se frustrarán los planes de Dios. Así
       entonces asumiendo con seriedad nuestro compromiso de exploradores,
-      seremos capa- ces de transformar el mundo en el que vivimos en el Reino de
+      seremos capaces de transformar el mundo en el que vivimos en el Reino de
       Dios.
     </p>
     <h3>Palabra de Dios:</h3>
@@ -322,7 +322,7 @@
     <ol>
       <li>
         <strong>1.</strong> Leer el cuento «El cuarto rey mago" y comentarlo
-        brevemente, compartiendo las impresio- nes de cada uno
+        brevemente, compartiendo las impresiones de cada uno
       </li>
       <li>
         <strong>2.</strong> Compararlo con la vida de cada uno, preguntando:
@@ -348,7 +348,7 @@
       distribuye indistintamente y gratuitamente. Nadie los tiene todos ni nadie
       no tiene ninguno. Son muy variados y diversos. Algunos se los ve
       fácilmente y a otros le cuesta más reconocerlos. Como primer paso, debemos
-      descubrirlos y ser conscientes de que todo el potencial que tene- mos
+      descubrirlos y ser conscientes de que todo el potencial que tenemos
       dentro. Esto nos lleva a ser muy agradecidos.
     </p>
     <p>
@@ -392,7 +392,7 @@
       <li>
         <strong>3.</strong> De la lista, seleccionar a la Madre Teresa, (que es
         muy probable que la nombren) y aprovchando que todos deben algo de ella,
-        invitar a que cada uno cuente lo que más le haya impac- tado de lo que
+        invitar a que cada uno cuente lo que más le haya impactado de lo que
         haya escuchado o visto alguna vez.
       </li>
       <li>
@@ -426,7 +426,7 @@
     <p>
       concretas frente a la realidad en la cual nos toca vivir podemos llegar a
       descubrir intereses egoístas que se meten en medio de nuestra buena
-      voluntad y nos impiden actuar con verda- dera solidaridad.
+      voluntad y nos impiden actuar con verdadera solidaridad.
     </p>
     <h3>Palabra de Dios: “Porque tuve hambre” (Mt 25, 35-40)</h3>
     <p>
@@ -465,7 +465,7 @@
     <p>
       En relación a la canción y a lo vivido en las actividades, cada uno vaya
       diciendo algo pequeño y concreto donde se puede ser solidario en la vida
-      cotidiana. También cada uno puede mani- festar una situación en la que no
+      cotidiana. También cada uno puede manifestar una situación en la que no
       supo utilizar sus talentos y fue indiferente al prójimo
     </p>
     <p>
