--- a/src/18-santidad.html
+++ b/src/18-santidad.html
@@ -18,7 +18,7 @@
         <strong>58.</strong>
         <em
           >La educación exploradoril no es sólo una técnica; es una verdadera
-          pedagogía, encamina- da a la creación de un tipo de hombre que aspira
+          pedagogía, encaminada a la creación de un tipo de hombre que aspira
           a la perfección.</em
         >
       </li>
@@ -26,7 +26,7 @@
         <strong>59 a)</strong>
         <em
           >El Exploradorismo es, más que nada, un sistema de vida. Tiene un
-          método educativo ca- paz de dar, a los adolescentes y jóvenes, ideales
+          método educativo capaz de dar, a los adolescentes y jóvenes, ideales
           para vivir y una ruta para seguir.</em
         >
       </li>
@@ -34,7 +34,7 @@
         <strong>60 b)</strong> S
         <em
           >e busca formar personas en la acepción integral del término, mediante
-          el Exploradoris- mo que nunca es un fin en sí mismo.</em
+          el Exploradorismo que nunca es un fin en sí mismo.</em
         >
       </li>
       <li>
@@ -100,7 +100,7 @@
     <p>
       Los rastreadores-hogueras tienen una mirada fantasiosa sobre los santos,
       donde los rcuerdos más fuertes tienen que ver con hechos sobrenaturales
-      que los muestran como semi- dioses o milagreros.
+      que los muestran como semidioses o milagreros.
     </p>
     <h3>- Orientación:</h3>
     <p>
@@ -146,7 +146,7 @@
       <li>
         - ¿Con qué frecuencia nos confesamos, como signo de reconciliación con
         Dios para retomar fuerzas, empezar de nuevo y alcanzar los ideales que
-        nos proponemos? ¿Cómo “buenos cris- tianos” creemos que la
+        nos proponemos? ¿Cómo “buenos cristianos” creemos que la
         Reconciliación y la Eucaristía van de la mano?
       </li>
     </ul>
@@ -158,7 +158,7 @@
       </li>
       <li>
         - ¿Contamos con un director espiritual que nos ayude a ver con más
-        claridad algunas situa- ciones que nos resultan difíciles de resolver?
+        claridad algunas situaciones que nos resultan difíciles de resolver?
       </li>
       <li>- ¿Tenemos algún libro formativo a mano?</li>
       <li>
@@ -242,7 +242,7 @@
     <ul>
       <li>
         - Los rastreadores-hogueras entendieron que ser santo, significa ser
-        "distinguido", "destaca- do" y que todos están llamados a distinguirse
+        "distinguido", "destacado" y que todos están llamados a distinguirse
         de la mediocridad.
       </li>
       <li>
@@ -508,7 +508,7 @@
         las escuchan. No entristezcan al Espíritu Santo de Dios, que los ha
         marcado con un sello para el día de la redención. Eviten la amargura,
         los arrebatos, la ira, los gritos, los insultos y toda clase de maldad.
-        Por el contrario, sean mutuamente buenos y compasi- vos, perdonándose
+        Por el contrario, sean mutuamente buenos y compasivos, perdonándose
         los unos a los otros como Dios los ha perdonado en Cristo.»</em
       >
     </p>
