--- a/src/19-testimonio.html
+++ b/src/19-testimonio.html
@@ -19,7 +19,7 @@
         <em
           >El/La Explorador/a, lleno de confianza y optimismo, imprime a todos
           los aspectos de la vida, una nota de fiesta, iluminando a todos con su
-          cálido testimonio, fruto de esperanza cristiana, por- que hace suya la
+          cálido testimonio, fruto de esperanza cristiana, porque hace suya la
           exhortación de San Pablo: “Estad siempre alegres” (Tes. 5, 16;
           Filipenses 4, 4).</em
         >
@@ -94,7 +94,7 @@
     </p>
     <p>
       Rastreadores / Hogueras hayan reﬂexionado sobre algunos valores, lo cual
-      hará más enrique- cedor el trabajo grupal y los aspectos que se puedan
+      hará más enriquecedor el trabajo grupal y los aspectos que se puedan
       llegar a discutir.
     </p>
     <h2>TU MOMENTO</h2>
@@ -102,7 +102,7 @@
     <h3>- Dinámica</h3>
     <p>
       Compartimos entre animadores algunas preguntas que nos ayuden a recuperar
-      nuestra pro- pia visión y la mirada de los chicos/as sobre este tema:
+      nuestra propia visión y la mirada de los chicos/as sobre este tema:
     </p>
     <ul>
       <li>
@@ -114,7 +114,7 @@
       </li>
       <li>
         - ¿Son capaces de mantenerse en lo que creen, a pesar que no le sean
-        favorables las conse- cuencias?- ¿Qué ídolos tienen nuestros/as
+        favorables las consecuencias?- ¿Qué ídolos tienen nuestros/as
         chicos/as? ¿Qué valores y antivalores imitan de ellos?
       </li>
       <li>
@@ -289,7 +289,7 @@
       de su Sagrado Corazón y nos invita a vivir diferente y preguntarnos
       realmente qué huellas queremos dejar en la vida de tantos jóvenes que Tata
       Dios nos confía en nuestras manos. El Espíritu Santo sopla y nos empuja a
-      reconocer en nuestros hermanos más necesita- dos y discriminados el rostro
+      reconocer en nuestros hermanos más necesitados y discriminados el rostro
       de Cristo.
     </p>
     <h2>ENTENDIÉNDOLOS</h2>
@@ -313,7 +313,7 @@
       aparentando algo que realmente no son. La inseguridad, la presión social y
       la necesidad de aceptación-popularidad social aparecen como sensaciones
       distintivas de esta etapa madurativa, lo cual les genera interrogantes
-      hacia su interior pen- sando en ¿quién soy realmente? y ¿quién quiero ser?
+      hacia su interior pensando en ¿quién soy realmente? y ¿quién quiero ser?
     </p>
     <h2>OBJETIVOS CUMPLIDOS</h2>
     <ul>
@@ -324,7 +324,7 @@
       </li>
       <li>
         - Los Rastreadores / Hogueras comprendieron que en sus modelos de vida:
-        la palabras invi- ta, pero el ejemplo arrastra y contagia.
+        la palabras invita, pero el ejemplo arrastra y contagia.
       </li>
       <li>
         - Los Rastreadores / Hogueras adoptaron actitudes concretas para vivir
@@ -346,7 +346,7 @@
     <p>
       Esta actividad invita a los Rastreadores / Hogueras a reconocer que aún en
       los esfuerzos más costosos y en los momentos de dolor, seguimos las
-      huellas de sus pasos porque Jesús siem- pre camina adelante, en nuestro
+      huellas de sus pasos porque Jesús siempre camina adelante, en nuestro
       encuentro con los demás.
     </p>
     <h3>- Actividad:</h3>
@@ -390,7 +390,7 @@
       como una palabra vacías que no permite verificar aquello que proponen. Por
       lo tanto nuestra coherencia consiste en protagonizar hechos que permitan
       experimentar lo que las palabras dicen. Este compromiso que asumimos lo
-      hacemos realidad con el esfuerzo diario de nuestras ma- nos. Así estamos
+      hacemos realidad con el esfuerzo diario de nuestras manos. Así estamos
       mostrando un ejemplo de coherencia y de credibilidad que produce todo un
     </p>
     <p>
@@ -432,7 +432,7 @@
       el Emanuel, que significa “Dios con nosotros”. Jesús quiere cambiar las
       realidades que nos duelen “con nosotros”. Esta actividad invita a los
       Rastreadores / Hogueras a saberse trabajadores del Reino de Dios que se
-      construye con el trabajo cotidiano, que como la levadu- ra crece en
+      construye con el trabajo cotidiano, que como la levadura crece en
       silencio sin que nadie lo perciba.
     </p>
     <h3>- Actividad:</h3>
@@ -488,7 +488,7 @@
     <p>
       <em
         >«Jesús dijo también: “¿Con qué podré comparar el Reino de Dios? Se
-        parece a un poco de leva- dura que una mujer mezcló con gran cantidad de
+        parece a un poco de levadura que una mujer mezcló con gran cantidad de
         harina, hasta que fermentó toda la masa.”»</em
       >
     </p>
@@ -606,7 +606,7 @@
       Jesús nos pide que comprendamos las cosas grandes y pequeñas del hombre
       concreto y de la sociedad. Que busquemos con imaginación creadora nuevos
       modos de vivir haciendo relidad su anuncio del Reino de Dios, realizar el
-      bien y construir un mundo mejor, donde la pala- bra sea creíble y las
+      bien y construir un mundo mejor, donde la palabra sea creíble y las
       personas confiables.
     </p>
     <p>
@@ -625,7 +625,7 @@
     <p>
       Ya el primer artículo de la ley de honor nos habla de "ser testigos", como
       para que sea la base de nuestra vida y se convierta en un principio
-      fundamental. No es casualidad que se encuen- tre en el primer lugar.
+      fundamental. No es casualidad que se encuentre en el primer lugar.
     </p>
     <p>
       La profundidad que por sí misma ya tiene la palabra "testigo", viene
@@ -638,7 +638,7 @@
     </p>
     <p>
       propio testimonio de vida nos invita a imitarlo, para que muchos otros
-      también puedan cono- cerlo a través de nuestro testimonio.
+      también puedan conocerlo a través de nuestro testimonio.
     </p>
     <p>
       Implica ser "buen explorador" en todas partes, no sólo entre los demás
@@ -748,7 +748,7 @@
       empezó a formar una Iglesia consciente de esto, luchadora de los derechos
       humanos. No se contentó con anunciar el Evangelio, sino también se dedicó
       a denunciar la injusticia: la denuncia social la proclamó constitutiva del
-      se- guimiento de Jesucristo, de la Iglesia de Jesucristo. Quería una
+      seguimiento de Jesucristo, de la Iglesia de Jesucristo. Quería una
       Iglesia libre, servidora y pobre.
     </p>
     <p>Era consciente de que estaba sentenciado, no solo amenazado:</p>
