--- a/src/20-corresponsabilidad.html
+++ b/src/20-corresponsabilidad.html
@@ -69,7 +69,7 @@
       por igual y cada uno nos otorga una responsabilidad frente al otro. Y esta
       responsabilidad es una ida y vuelta, cada uno debe dar su contribución,
       ser protagonistas. En esta relación que hacemos entre todos nace la
-      corres- ponsabilidad: siempre orientada a un bien común y justo.
+      corresponsabilidad: siempre orientada a un bien común y justo.
     </p>
     <h2>TU MOMENTO</h2>
     <p>“¿Y a vos qué te pasa con este tema?”</p>
@@ -91,7 +91,7 @@
       quienes me rodean (y en especial nuestros Rastredores-Hogueras) eso es la
       Corresponsabilidad que define a un animador. Nos debemos a la educación de
       nuestros chicos y eso es una importante responsabilidad, que merece esa
-      bús- queda constante que plantea Liniers.
+      búsqueda constante que plantea Liniers.
     </p>
     <h2>ALGUNAS COSAS CLARAS</h2>
     <ul>
@@ -119,7 +119,7 @@
         >«El reino de los Cielos es también como un hombre que, al salir de
         viaje, llamó a sus servidres y les confió sus bienes. A uno le dio cinco
         talentos, a otro dos, y uno solo a un tercero, a cada uno según su
-        capaci- dad; y después partió. En seguida, el que había recibido cinco
+        capacidad; y después partió. En seguida, el que había recibido cinco
         talentos, fue a negociar con</em
       >
     </p>
@@ -331,7 +331,7 @@
       </li>
       <li>
         <strong>2.</strong> Distribuir distintas tareas a cada uno, sin que se
-        superpongan ni queden cosas sin respon- sables.
+        superpongan ni queden cosas sin responsables.
       </li>
       <li>
         <strong>3.</strong> Comenzar la construcción o actividad, sin estar
@@ -510,7 +510,7 @@
       <li>
         <strong>6.</strong> Cuando todos los grupos hayan terminado, leer de la
         <strong
-          >Palabra de Dios "El cuerpo y los miem- bros" (1 Corintios
+          >Palabra de Dios "El cuerpo y los miembros" (1 Corintios
           12,12-27)</strong
         >
       </li>
@@ -688,7 +688,7 @@
       <em
         >La semilla está segura. Ella será pan. O nuevamente será trigal. Es
         eterna, porque vive. Y vive multiplicada porque ha muerto su
-        individualidad. Por ella seguirán existiendo los nuevos ver- deos, las
+        individualidad. Por ella seguirán existiendo los nuevos verdeos, las
         viejas aguadas y los animales que en ellas se abrevan.</em
       >
     </p>
