--- a/src/21-naturaleza.html
+++ b/src/21-naturaleza.html
@@ -72,7 +72,7 @@
       proceso. Todavía subsiste un modelo de producción extractivista donde la
       tierra es sobrexplotada, desgarrada, contaminada y envenenada (ej. la
       megaminería, la deforestación, la casa indiscriminada de animales, la
-      contaminación de cursos de agua por industrias contami- nantes como las
+      contaminación de cursos de agua por industrias contaminantes como las
       curtiembres y las pasteras, el uso de pesticidas cancerígenos y la
       producción
     </p>
@@ -183,7 +183,7 @@
       fuerzas, o simplemente para disfrutar. Son muy revoltosos e inquietos. El
       contacto con la naturaleza rodeado de amigos durante momentos de
       recreación les genran experiencias gratas que suelen recordar a lo largo
-      del tiempo como algunos de los mo- mentos más alegres de sus vidas.
+      del tiempo como algunos de los momentos más alegres de sus vidas.
     </p>
     <h2>OBJETIVOS CUMPLIDOS</h2>
     <p>Que los rastreadores-hogueras puedan:</p>
@@ -273,7 +273,7 @@
     <p>
       El hombre se pregunta por Dios y lo busca en su vida. El que grita con
       tono desafiante: "¿Dóde está Dios? iQue me muestre su existencia!". Ese, no
-      encontrará a Dios. El que desee encon- trar a Dios, debe buscarlo.
+      encontrará a Dios. El que desee encontrar a Dios, debe buscarlo.
     </p>
     <p>
       Esto presupone, en primer lugar, estar atento; y no puede estarlo el que
@@ -292,7 +292,7 @@
     <p>
       Pero una cosa es cierta también aquí: muchos hombres que no creían en la
       realidad de Dios, más tarde confesaron "Yo he encontrado a Dios". Esto
-      debe animarnos a todos. Porque sabe- mos que Dios existe y está presente
+      debe animarnos a todos. Porque sabemos que Dios existe y está presente
       en medio nuestro.
     </p>
     <p>
@@ -329,7 +329,7 @@
     </p>
     <p>
       <strong>El sol:</strong> Es aquel que da vida. Símbolo de la resurrección.
-      El solse brinda por completo. Com- parte su luz y su calor. Pensemos al
+      El solse brinda por completo. Comparte su luz y su calor. Pensemos al
       grupo como sol.
     </p>
     <p>
@@ -357,7 +357,7 @@
       de los troncos hasta la ternura de una ﬂor. Las plantas nos hablan de
       paciecia, constancia, esperanza y proyectos a largo plazo. Brindan
       generosamente sus ﬂores y frtos que han producido con su trabajo y que
-      encierran la vida nueva que promete la semilla. Co- rre por dentro suyo
+      encierran la vida nueva que promete la semilla. Corre por dentro suyo
       una sabia que comunica, alimenta y da fuerzas, como un Espíritu de vida.
     </p>
     <p>
@@ -509,7 +509,7 @@
     <p>
       Son actividades varias que se mencionan como sugerencia y que dependen de
       los elementos de la naturaleza del lugar de campamento. A cada uno de
-      ellos se le pueden buscar simbolis- mos, comparaciones y un sentido para
+      ellos se le pueden buscar simbolismos, comparaciones y un sentido para
       el grupo.
     </p>
     <p>
@@ -547,13 +547,13 @@
     <p>
       Una mañana luego de celebrar una misa salió con los indios para colgar la
       campana de la Iglesia, en ese momento es asesinado en manos de un cacique
-      que le tenía envidia. Fue bea- tificado en 1934 y luego canonizado en 1988.
+      que le tenía envidia. Fue beatificado en 1934 y luego canonizado en 1988.
     </p>
     <p>
       Como relatos alternativos pueden recuperarse hechos trascendentes que
       tuvieron que ver con reclamos populares (la asamblea ambiental de
       Gualeguaychú –Entre Ríos- y su reclamo contra las papeleras desde el 2003,
-      los reclamos del pueblo de Famatina –la Rioja- contra la megami- nería
+      los reclamos del pueblo de Famatina –la Rioja- contra la megaminería
       desde el 2004, la historia de Chico Méndez como defensor de la selva
       amazónica, etc.)
     </p>
@@ -582,7 +582,7 @@
       brillaba en las montañas y en los mares y el espíritu de Dios llenaba el
       universo. Y el hombre dijo: "Que posea yo lodo el poder en el cielo y en la
       tierra." Y vió que el poder era bueno. Y puso el nombre de “jefes” a los
-      que tenían el poder y llamó “des- graciados” a los que buscaban la
+      que tenían el poder y llamó “desgraciados” a los que buscaban la
       reconciliación. Y así fue el sexto día antes del fin.
     </p>
     <p>
@@ -622,7 +622,7 @@
       como actuamos nosotros, que mate como matamos nosotros". El hombre creó un
       dios a medida, y lo bendijo diciendo: "Muéstrate a nosotros y pon la tierra
       a nuestros pies: No te faltará nada si haces siempre nuestra propia
-      voluntad". Y así fue. El hombre vió que todo lo que había hecho y esta- ba
+      voluntad". Y así fue. El hombre vió que todo lo que había hecho y estaba
       muy satisfecho de ello. Así fue el día antes del fin.
     </p>
     <p>
@@ -664,11 +664,11 @@
     </p>
     <p>
       Ayer te vi cuando conversabas con tus amigos y esperé todo el día deseando
-      que vos quisie- ras hablar también conmigo.
+      que vos quisieras hablar también conmigo.
     </p>
     <p>
       Conforme avanzaba la tarde te dí una caída del sol y una brisa suave y
-      fresca para que des- canses. Esperé, pero nunca llegaste a recibirla.
+      fresca para que descanses. Esperé, pero nunca llegaste a recibirla.
     </p>
     <p>
       Te ví quedarte dormido anoche y tenía ganas de tocarte la frente, así es
@@ -698,7 +698,7 @@
     </p>
     <p>
       Mi amor por vos es más profundo que los océanos y más grande que cualquier
-      pena o necesi- dad que tenga tu corazón. Si tan solo me buscaras tu carga
+      pena o necesidad que tenga tu corazón. Si tan solo me buscaras tu carga
       se aliviaría.
     </p>
     <p>
@@ -712,7 +712,7 @@
     </p>
     <p>
       Te necesito… No te molesto más. Ya sos grande y libre para elegir. Yo te
-      elegí, te elijo y te se- guiré eligiendo a vos. Y por esa razón, siempre te
+      elegí, te elijo y te seguiré eligiendo a vos. Y por esa razón, siempre te
       voy a esperar. Te amo.
     </p>
     <p>Tu amigo Jesús</p>
