--- a/src/22-vida.html
+++ b/src/22-vida.html
@@ -23,7 +23,7 @@
       protagonista de su desarrollo y maduración como persona libre y
       responsabilidad frente a Dios y a su conciencia, aceptando al mismo
       tiempo, la ayuda fraterna que le brinda, como contribución a tal fin, la
-      Comunidad Explorado- ril, especialmente a través de sus Jefes.
+      Comunidad Exploradoril, especialmente a través de sus Jefes.
     </p>
     <ol>
       <li>
@@ -57,7 +57,7 @@
     <p>Elegiste esta consigna porque…</p>
     <p>
       Los rastreadores-hogueras suelen atravesar crisis de sentido donde se
-      cuestionan el por- qué de su propia vida.
+      cuestionan el porqué de su propia vida.
     </p>
     <p>
       Los rastreadores-hogueras no suelen tener una mirada agradecida ante todas
@@ -185,12 +185,12 @@
     </p>
     <p>
       Ante las propuestas de muerte que aparecen a su alrededor es común la
-      negación, la eva- sión, el darle poca importancia y no reconocer los
+      negación, la evasión, el darle poca importancia y no reconocer los
       riesgos que traen aparejados.
     </p>
     <p>
       Al mismo tiempo suelen alternar momentos de alegría eufórica y tristeza,
-      donde se cuestio- nan el sentido de la vida.
+      donde se cuestionan el sentido de la vida.
     </p>
     <h2>OBJETIVOS CUMPLIDOS</h2>
     <p>
@@ -214,7 +214,7 @@
       dolor. Estos problemas son los motvos que buscan una salida en las
       adicciones. Adicción significa no hablar. Por eso el ejercicio de poner en
       palabras las situaciones conﬂictivas para esta edad resulta algo sumamente
-      sa- nador y necesario.
+      sanador y necesario.
     </p>
     <h3>- Actividad:</h3>
     <p>
@@ -408,7 +408,7 @@
       no podemos controlarlas, simplemente suceden, como por ejemplo numerosas
       enfermedades. (Lo que nos da fuertes razones de estar agradecidos a Dios
       cuando estamos sanos). Otras en cambio, son perfectamente previsibles y
-      evitables, pero por distin- tos motivos no siempre sucede así. Por eso
+      evitables, pero por distintos motivos no siempre sucede así. Por eso
       tenemos que cuidar nuestra salud, evitando todo
     </p>
     <p>
@@ -529,7 +529,7 @@
     </p>
     <p>
       Jesús le dijo: “No me retengas, porque todavía no he subido al Padre. Ve a
-      decir a mis herma- nos: ´Subo a mi Padre, el Padre de ustedes; a mi Dios,
+      decir a mis hermanos: ´Subo a mi Padre, el Padre de ustedes; a mi Dios,
       el Dios de ustedes´”.
     </p>
     <p>
@@ -613,7 +613,7 @@
       notamos en que esas solidaridades se entrelazan, en que cuando encuentran
       límites y frenos vuelven a surgir de manera distintas; lo notamos en que
       podemos unirnos para celebrar y expresar alegrías profundas; lo notamos en
-      que a la sangre de nuestros márti- res la sentirnos viva dentro de
+      que a la sangre de nuestros mártires la sentirnos viva dentro de
       nosotros, nos emociona y nos da fuerza para seguir adelante.
     </p>
     <p>
