--- a/src/23-esperanza.html
+++ b/src/23-esperanza.html
@@ -36,7 +36,7 @@
       </li>
       <li>
         - Manifiestan que ya es demasiado tarde para remediar alguna situación y
-        que las esperan- zas están totalmente perdidas.
+        que las esperanzas están totalmente perdidas.
       </li>
       <li>- No tienen proyectos, ideales o metas que cumplir.</li>
       <li>
@@ -107,7 +107,7 @@
     <p>
       En esta etapa los adolescentes se sienten identificados con grandes ideales
       y esperanzas que descubren en la sociedad. Tienen actitudes exaltadas y
-      vivas que los llevan a preocupar- se por lo inmediato. Les cuesta tomar
+      vivas que los llevan a preocuparse por lo inmediato. Les cuesta tomar
       las cosas con una mirada a largo plazo.
     </p>
     <p>
@@ -117,7 +117,7 @@
       vista de la Psicología, la esperanza se relaciona con las metas y el
       sentido de formación personal. Se define como un conjunto de ideas y
       creencias que nos ayudan a encontrar caminos para alcanzar nuestras metas
-      y nos dan confianza en que tene- mos la capacidad para lograrlas, por eso
+      y nos dan confianza en que tenemos la capacidad para lograrlas, por eso
       la gran importancia de que los adolescentes cuenten
     </p>
     <p>
@@ -128,7 +128,7 @@
       Un ejercicio útil es hacerlos visualizar las metas que tengan con
       claridad. Fomentar a que se imaginen qué quieren lograr y permitir que
       imaginen el mejor resultado posible. Una vez que se tenga clara cómo sería
-      alcanzar esa meta (dónde estarían, con quién, haciendo exactamen- te qué),
+      alcanzar esa meta (dónde estarían, con quién, haciendo exactamente qué),
       se deberán activar los recursos para llegar a la dirección deseada.
     </p>
     <p>
@@ -137,7 +137,7 @@
       propósito. Las personas que tienen altos niveles de esperanza tienden a
       conectarse mejor con los demás, por lo que les interesan no sólo sus
       propias metas, sino las de las otras personas y son más capaces de
-      considerar dife- rentes perspectivas o puntos de vista.
+      considerar diferentes perspectivas o puntos de vista.
     </p>
     <h2>OBJETIVOS CUMPLIDOS</h2>
     <ul>
@@ -182,7 +182,7 @@
     </p>
     <p>
       Uno saca una mano cualquiera y lee la explicación, tiene que adivinar de
-      quién se trata y dár- sela a esa persona. Así se sigue hasta que no queden
+      quién se trata y dársela a esa persona. Así se sigue hasta que no queden
       manos en el centro.
     </p>
     <p>
@@ -201,7 +201,7 @@
     </p>
     <p>
       Leer en pequeños grupos los relatos de "Ellos murieron en la esperanza"
-      que cuentan las his- torias de cristianos muertos en la época de la
+      que cuentan las historias de cristianos muertos en la época de la
       dictadura.
     </p>
     <p><strong>Ellos murieron en la Esperanza- Mártires argentinos</strong></p>
@@ -291,7 +291,7 @@
       nombre era muy importante. El nombre era la pesonalidad misma. Mostraba la
       misión que una persona estaba llamada a cumplir. Jesús quiere decir
       "salvador". Esa es su misión; esa es su actividad. Ese es su ser más
-      íntimo. Su nombre lo define a sí mis- mo. Así se comprende lo que predica y
+      íntimo. Su nombre lo define a sí mismo. Así se comprende lo que predica y
       lo que vive. Viene a salvar, y eso hace.
     </p>
     <p>
@@ -312,7 +312,7 @@
       los males de este mundo. Salva porque nos da la mirada honda sobre las
       personas y los acontecimientos. El nos hace ver con claridad. Con El
       gozamos más la vida. Este es el proyecto de Dios que nos presenta a través
-      de Jesús, impulsado por el Espíritu San- to. Es la Buena Noticia nos da
+      de Jesús, impulsado por el Espíritu Santo. Es la Buena Noticia nos da
       fuertes motivos para vivir con esperanza.
     </p>
     <h3>
@@ -384,7 +384,7 @@
     </p>
     <p>
       Este es el proyecto de Dios que nos presenta a través de Jesús, impulsado
-      por el Espíritu San- to. Es la Buena Noticia nos da fuertes motivos para
+      por el Espíritu Santo. Es la Buena Noticia nos da fuertes motivos para
       vivir con esperanza.
     </p>
     <p>
@@ -464,7 +464,7 @@
     </p>
     <p>
       Explicar que no es una carrera, sino que todo el grupo pueda ir junto
-      descubriendo e interpre- tando los signos y así seguir el camino correcto.
+      descubriendo e interpretando los signos y así seguir el camino correcto.
     </p>
     <p>
       Acompañar el recorrido permitiendo que tomen caminos equivocados, pero
@@ -485,7 +485,7 @@
       los males de este mundo. Salva porque nos da la mirada honda sobre las
       personas y los acontecimientos. El nos hace ver con claridad. Con El
       gozamos más la vida. Este es el proyecto de Dios que nos presenta a través
-      de Jesús, impulsado por el Espíritu San- to. Es la Buena Noticia nos da
+      de Jesús, impulsado por el Espíritu Santo. Es la Buena Noticia nos da
       fuertes motivos para vivir con esperanza.
     </p>
     <p>Terminado el tiempo de detención continuar el camino.</p>
@@ -628,7 +628,7 @@
     </p>
     <p>
       Este es el proyecto de Dios que nos presenta a través de Jesús, impulsado
-      por el Espíritu San- to. Es la Buena Noticia nos da fuertes motivos para
+      por el Espíritu Santo. Es la Buena Noticia nos da fuertes motivos para
       vivir con esperanza.
     </p>
     <p>
@@ -679,7 +679,7 @@
     <p>
       Jesús dedicó su vida a anunciar el Reino de Dios. Empezó en un pueblito
       perdido en la Paletina y con sus gestos y palabras lo fue haciendo
-      realidad. Hoy seguimos ese camino y mante- nemos la misma esperanza.
+      realidad. Hoy seguimos ese camino y mantenemos la misma esperanza.
     </p>
     <p>
       Jesús nos propone la globalización de la esperanza, comenzando desde
@@ -762,7 +762,7 @@
       puntearla y remver la tierra rompiendo los terrones duros. "La tierra
       antes de sembrar debe ser preparada. La tierra sufre la presencia de la
       pala, pero es necesario prepararla para que quede a punto. Cada uno de
-      nosotros debe destruir sus egoís- mos e intereses propios para el bien de
+      nosotros debe destruir sus egoísmos e intereses propios para el bien de
       todo el grupo"
     </p>
     <ul>
@@ -770,7 +770,7 @@
         • Tomar cada uno una lata y con alguna herramienta hacerle un agujero en
         la parte de abajo para que se escurra el agua. "El lugar donde va a
         crecer la planta tiene que contener lo que necesita y descartar los
-        exce- sos que no le hacen bien. Como grupo tenemos que dejar de lado los
+        excesos que no le hacen bien. Como grupo tenemos que dejar de lado los
         abusos, excesos y cosas
       </li>
     </ul>
@@ -827,7 +827,7 @@
         entonces visitarlo. Al entrar vio en el jardín los dos gajos secos, los
         que quedaban. Se entristeció y se fue sin decirle palabra. Volvió a su
         jardín y pensó... ¡Qué dura es la vida sin esperanza! Cuando ya no se
-        puede espe- rar ninguna ﬂor. Cuando no hay nada para regar ni cuidar. El
+        puede esperar ninguna ﬂor. Cuando no hay nada para regar ni cuidar. El
         tenía esperanza. Lo nuevo puede
       </li>
     </ol>
@@ -876,7 +876,7 @@
       comparándolo con la acción de Dios en el grupo. (Si está nublado
       relacionar por el lado negativo de la situación, como algo a cambiar)
       Hacer un momento de silencio y acostarse en el suelo mirando hacia arriba,
-      al cielo, aprecian- do y descubriendo la acción del sol.
+      al cielo, apreciando y descubriendo la acción del sol.
     </p>
     <p>Que cada uno haga una oración personal.</p>
     <p>
@@ -943,7 +943,7 @@
       en la medida que cada uno aporte su granito de arena que le dé "bases
       sólidas" a la patrulla. La patrulla va creciendo a lo largo del tiempo con
       esfuerzo y sacrificio. La esperanza de llegar a ser un grupo unido y maduro
-      permite seguir intentándolo. Siempre la alegría de haber logra- do la meta
+      permite seguir intentándolo. Siempre la alegría de haber logrado la meta
       es mayor que las dificultades previas.
     </p>
     <h3>Palabra de Dios: (Mc. 4, 30-31) Parábola de la semilla de mostaza</h3>
