--- a/src/24-servicio.html
+++ b/src/24-servicio.html
@@ -21,7 +21,7 @@
         <strong>1.</strong>
         <em
           >Es la síntesis práctica de los ideales exploradoriles de servicio al
-          prójimo. Es un grito de ac- ción y entrega que le recuerda su
+          prójimo. Es un grito de acción y entrega que le recuerda su
           compromiso.</em
         >
       </li>
@@ -29,7 +29,7 @@
         <strong>84 2.</strong>
         <em
           >Va más allá de la Buena Acción porque alerta al/a la Explorador/a a
-          estar siempre prepa- rado para servir al prójimo y vivir en actitud de
+          estar siempre preparado para servir al prójimo y vivir en actitud de
           disponibilidad.</em
         >
       </li>
@@ -59,7 +59,7 @@
         <strong>1.</strong>
         <em
           >Uno de los elementos más importantes en la formación de todo
-          Explorador/a es el compromi- so personal de vivir y practicar
+          Explorador/a es el compromiso personal de vivir y practicar
           diariamente su Buena Acción (B.A.) según el Evangelio.</em
         >
       </li>
@@ -92,7 +92,7 @@
         <strong>98 5.</strong>
         <em
           >La elección de la B.A. que se ha de realizar es algo absolutamente
-          personal y cada Explo- rador/a se siente satisfecho de encontrar
+          personal y cada Explorador/a se siente satisfecho de encontrar
           siempre una nueva manera de hacerla.</em
         >
       </li>
@@ -134,7 +134,7 @@
           dentro de la Institción, y se capacitan para compartir las riquezas y
           valores que recibieron dentro del M.E.S. con los adolescentes y
           jóvenes que cada año entran en las filas del Batallón. De este modo
-          garanti- zan la continuidad de la obra educadora del M.E.S.</em
+          garantizan la continuidad de la obra educadora del M.E.S.</em
         >
       </li>
     </ol>
@@ -168,7 +168,7 @@
       una necesidad o una herida en el hermano no mira para otro lado, sino que
       busca asistirla. El servicio es entregar vida, tiempo y energías por el
       otro. Es la donación de nosotros mismos, como lo hace Jesús cuando se
-      vuelve a entregar en el altar. Nuestros grandes modelos de ser- vicio y
+      vuelve a entregar en el altar. Nuestros grandes modelos de servicio y
       entrega siempre serán Jesús y María que nos proponen una “Iglesia
       samaritana”, que
     </p>
@@ -273,7 +273,7 @@
     <p>
       Veamos cuáles son los límites egoístas que ie ponemos a nuestro sí para
       tratar de vencerlos. María ante la propuesta de Dios da un sí profundo,
-      humilde y comprometido, poniéndose total- mente en sus manos. Estuvo
+      humilde y comprometido, poniéndose totalmente en sus manos. Estuvo
       siempre lista a lo que el Señor le pidió respondiendo con alegría.
     </p>
     <p>
@@ -291,7 +291,7 @@
       necesidades sin preocuparnos por los demás. ¿Por qué no mirar a nuestro
       lado para brindar un servicio a nuestro compañero que necesita? ¿Por qué
       no mirar a nuestro lado y ponerse de acuerdo para ayudarnos mutuamente?
-      ¿Por qué no mirar a nuestro lado para descubrir a los otros que tam- bién
+      ¿Por qué no mirar a nuestro lado para descubrir a los otros que también
       están sirviendo y trabajar organizadamente en conjunto?
     </p>
     <p>"Servir significa hacer la felicidad de los demás."</p>
@@ -432,7 +432,7 @@
     <h3>- Actividad:</h3>
     <p>
       Presentar brevemente la persona de María leyendo el texto "María
-      servidora", como motiva- ción e introducción a la actividad.
+      servidora", como motivación e introducción a la actividad.
     </p>
     <p>
       "Dormía y soñaba que a vida era alegría, desperté y me di cuenta que la
@@ -442,7 +442,7 @@
     <p>
       Aceptó tener un hijo porque así servía a la humanidad. Ella misma se define
       de esa manera cuando acepta ser madre. "Soy la servidora del Señor" Ese es
-      e! sentido de su vida y su voca- ción más profunda.
+      e! sentido de su vida y su vocación más profunda.
     </p>
     <p>
       Es una mujer servicial y servidora, no se contenta con palabras
@@ -463,7 +463,7 @@
     </p>
     <p>
       Que cada uno haga un dibujo de María según como se la imagine, tratando
-      que se pueda enten- der que es María, pero sin copiarse de otras imágenes
+      que se pueda entender que es María, pero sin copiarse de otras imágenes
       ya conocidas ni utilizar símbolos clásicos.
     </p>
     <p>
@@ -474,16 +474,16 @@
     </p>
     <p>
       Reunirse y que cada uno muestre su dibujo mientras el resto va
-      descubriendo en el los ges- tos, actitudes o demás características
+      descubriendo en el los gestos, actitudes o demás características
       dibujadas que relacionen con María.
     </p>
     <p>
       No entrar a debatir si el que lo dibujó pensó realmente en eso o no, dejar
-      que cada uno ex- prese lo que ve.
+      que cada uno exprese lo que ve.
     </p>
     <p>
       Una vez comentados todos los dibujos, buscar las coincidencias y
-      características más repre- sentativas.De entre todas, destacar la actitud
+      características más representativas.De entre todas, destacar la actitud
       de servicio preguntando:
     </p>
     <p>¿De qué forma fue su servicio?</p>
@@ -502,7 +502,7 @@
     </p>
     <p>
       A partir del comentarlo de la lectura y relacionando con lo conversado
-      antes, buscar un compro- miso para realizar personalmente que consista en
+      antes, buscar un compromiso para realizar personalmente que consista en
       alguna acción concreta de servicio al grupo.
     </p>
     <p>
@@ -600,9 +600,9 @@
     <p>mejor,</p>
     <p>cu-</p>
     <p>fruto</p>
-    <p>incapaces no- bien</p>
+    <p>incapaces nobien</p>
     <p>concreta</p>
-    <p>con- de</p>
+    <p>conde</p>
     <p>experiencias.</p>
     <p>
       variedad de experiencias. Por ejemplo, incluyendo de servicio especial y
