--- a/src/25-experiencia-del-agua.html
+++ b/src/25-experiencia-del-agua.html
@@ -23,7 +23,7 @@
       Han aprendido muchas cosas como grupo pero hay que ver en qué medida se
       han puesto en práctica. Hay posibilidades de que la vida del adolescente
       no vaya tan de acuerdo con lo que dice, por eso la presente consigna es
-      adecuada para reafirmar y refrescar ciertos conteni- dos y aspectos
+      adecuada para reafirmar y refrescar ciertos contenidos y aspectos
       trabajados durante el resto del año.
     </p>
     <h3>- Orientación:</h3>
@@ -35,7 +35,7 @@
     <p>
       Por otro lado “La Experiencia del Agua” retoma todo el camino hecho por
       los grupos consigna a consigna, presentando una experiencia fuerte de
-      encuentro comunitario con Dios, que per- mite hacer una evaluación de todo
+      encuentro comunitario con Dios, que permite hacer una evaluación de todo
       el proceso de formación.
     </p>
     <p>
@@ -75,7 +75,7 @@
       ser auténticos y sinceros, por eso el lema de la experiencia es: "Queremos
       ser y no aparentar". Con cada actividad central apuntar a descubrir una
       característica del agua en particular y su enseñanza para la vida de
-      todos. Relacionarla con alguna de las consignas ya realizadas, ha- ciendo
+      todos. Relacionarla con alguna de las consignas ya realizadas, haciendo
       presente el camino que como grupo están consolidando.
     </p>
     <h2>TEXTO PARA REFLEXIONAR Y ORIENTAR AL TRABAJO</h2>
@@ -204,7 +204,7 @@
         <td></td>
         <td>
           8) Después del almuerzo realizar Las balsas y concluir con Los signos
-          de la expe- riencia que consiste en una misa final .
+          de la experiencia que consiste en una misa final .
         </td>
       </tr>
       <tr>
@@ -229,7 +229,7 @@
       </li>
       <li>
         <strong>2) Agua disponible:</strong> Generosa, servicial, gratuita,
-        regalo. Se sirven todos, no se niega, siem- pre dispuesta. Se adapta y
+        regalo. Se sirven todos, no se niega, siempre dispuesta. Se adapta y
         no rechaza a nadie.
       </li>
       <li>
@@ -363,7 +363,7 @@
     <p>¿Cómo es el agua?</p>
     <p>
       ¿Qué características tiene? Seguramente irán apareciendo muchas
-      características y diferentes. Dejar que surjan, expli- cando que las irán
+      características y diferentes. Dejar que surjan, explicando que las irán
       descubriendo a lo largo de la experiencia.
     </p>
     <p>
@@ -388,14 +388,14 @@
       <li>
         • Observar la ﬂora: Descubrir los tipos de árboles y arbustos que se
         encuentran cerca, los que hunden sus raíces en el agua, detectar los de
-        truncos rectos, verticales o torcidos en al- gún sentido. Tratar de
+        truncos rectos, verticales o torcidos en algún sentido. Tratar de
         encontrar las razones y consecuencias de esas características.
       </li>
       <li>
         • Observar la fauna: Se puede permanecer ocultos junto al curso de agua
         esperando que aparezca algún animal que se acerque a beber. Ver las
         especies de animales, si van a cazar o sólo a beber. Buscar huellas, ver
-        si están frescas. Identificar los tipos de aves que se encuen- tran en el
+        si están frescas. Identificar los tipos de aves que se encuentran en el
         lugar.
       </li>
       <li>
@@ -474,7 +474,7 @@
     <h3>- Actividad:</h3>
     <p>
       Motivar sobre la necesidad de preparar un lugar de reﬂexión para compartir
-      momentos impor- tantes de la experiencia.
+      momentos importantes de la experiencia.
     </p>
     <p>
       Preparar un lugar de reﬂexión que sea cómodo y agradable. Construir allí
@@ -515,7 +515,7 @@
     </p>
     <p>
       Presentar a María, haciendo pasar una imagen suya de mano en mano por
-      todos los partici- pantes de la experiencia, como signo del compromiso de
+      todos los participantes de la experiencia, como signo del compromiso de
       querer imitarla.
     </p>
     <h3>- Reﬂexión:</h3>
@@ -541,7 +541,7 @@
       porque tenemos un don de Dios, como el agua, y tenemos que agradecérselo,
       compartirlo con generosidad, ponerlo al servicio de nuestros hermanos,
       brindarlo a quienes lo necesitan. Hay que tener cuidado con los usos malos
-      del agua bendita. Hay quienes confunden su fun- ción y la usan como una
+      del agua bendita. Hay quienes confunden su función y la usan como una
       "poción mágica".
     </p>
     <p>
@@ -592,7 +592,7 @@
         parienta Isabel va a tener un hijo, a pesar de que es anciana; la que
         decían que no podía tener hijos, está encinta desde hace seis meses. Para
         Dios no hay nada imposible.” Entonces María dijo: “Yo soy esclava del
-        Señor; que Dios haga conmigo como me has di- cho.”Con esto el ángel se
+        Señor; que Dios haga conmigo como me has dicho.”Con esto el ángel se
         fue.»</em
       >
     </p>
@@ -664,7 +664,7 @@
     </p>
     <p>
       lndicar que se saluden todos nuevamente coma lo hicieron al principio,
-      destacando la dife- rencia entre hacerlo con las manos sucias y las manos
+      destacando la diferencia entre hacerlo con las manos sucias y las manos
       limpias.
     </p>
     <p>Continuar conversando:</p>
@@ -895,7 +895,7 @@
       Hacer varios juegos activos en los que los chicos transpiren, tengan sed y
       se cansen. Durante el desarrollo de los juegos no dejar que tomen agua ni
       se refresquen. Cuando pidan agua demasiado insistentemente o se considere
-      suficiente el tiempo transcurri- do, reunirse y plantear:
+      suficiente el tiempo transcurrido, reunirse y plantear:
     </p>
     <p>¿Para qué quieren agua?</p>
     <p>¿Qué esperan de ella?</p>
@@ -944,7 +944,7 @@
       para vivir: donde hay agua, hay vida y la muerte sobreviene cuando falta.
       Cristo nos trae el agua de la vida: Él mismo es este agua vivificadora. Él
       es la fuente de la vida. Nos da una vida nueva. La vida merece vivirse, es
-      alegre. Jesús nos regala un rostro lleno de alegría: debemos conta- giar
+      alegre. Jesús nos regala un rostro lleno de alegría: debemos contagiar
       esa vida recibida de Jesús.
     </p>
     <p>
@@ -1053,7 +1053,7 @@
       hijo, debo acabar en su casa, en su familia. Los ríos san como las
       personas: agresivos, pasivos, alegres, activos, arrasadores, "pura pinta".
       Cada uno tiene su ritmo, su personalidad; cada uno es constructor, artífice
-      de su vida y pro- tagonista.
+      de su vida y protagonista.
     </p>
     <h3>
       Palabra de Dios: Isaías 41, 17-20. Isaías 35, 5-8. Ríos y vertientes
@@ -1172,7 +1172,7 @@
       </li>
       <li>
         -Los hombres de tu tierra -dijo el principito- cultivan cinco mil rosas
-        en un jardín y no encuen- tran lo que buscan.
+        en un jardín y no encuentran lo que buscan.
       </li>
       <li>-No lo encuentran nunca -le respondí.</li>
       <li>
@@ -1192,7 +1192,7 @@
         vida como una mera función biológica, sino que nos brida el bienestar de
         beberla, de refrescarnos con ella, de aliviarnos del calor y mucho más
         si se la comparte con familiares y amigos. Así también la oración no
-        sólo es necesaria para la vida, sino que debe disfrutarse, dedicárse- le
+        sólo es necesaria para la vida, sino que debe disfrutarse, dedicársele
         tiempo, compartirla con nuestros seres queridos.
       </li>
     </ul>
@@ -1606,7 +1606,7 @@
         >Cuando llegaron a donde estaba Jesús, vieron sentado, vestido y en su
         sano juicio, al que había estado poseído por aquella Legión, y se
         llenaron de temor. Los testigos del hecho les contaron lo que había
-        sucedido con el endemoniado y con los cer- dos.</em
+        sucedido con el endemoniado y con los cerdos.</em
       >
     </p>
     <p>
@@ -1746,7 +1746,7 @@
     <p>
       Comentar sobre la importancia de la familia para los chicos. Dar espacio
       para preguntas de los padres u otras inquietudes. Aprovechar a invitar a
-      las fami- lias a la Renovación de la Promesa que pronto harán los chicos.
+      las familias a la Renovación de la Promesa que pronto harán los chicos.
     </p>
     <p>
       Proponer pasar a compartir lo que trajeron para comer, poner música y
