--- a/src/26-renovacion.html
+++ b/src/26-renovacion.html
@@ -9,7 +9,7 @@
     <p>
       Ya se han realizado todas las consignas y la experiencia del agua. Los
       rastreadores-hogueras están esperando el momento de la Renovación de la
-      Promesa. La cele- bración es un momento de alegría para compartir con las
+      Promesa. La celebración es un momento de alegría para compartir con las
       familias y con toda la comunidad.
     </p>
     <h2>OBJETIVOS CUMPLIDOS</h2>
@@ -62,7 +62,7 @@
     </p>
     <p>
       Aclarar el concepto de "valor" procurando que todos entiendan lo mismo,
-      para evitar diferen- tes interpretaciones que luego confundan.
+      para evitar diferentes interpretaciones que luego confundan.
     </p>
     <p>Entre todos ir recordando los diferentes valores y armar una lista.</p>
     <p>
@@ -110,7 +110,7 @@
     </p>
     <p>
       Continuar con el viaje hasta dejar unos seis valores, que serán aquéllos
-      que el grupo consi- dera como los más importantes, sin los cuales nada
+      que el grupo considera como los más importantes, sin los cuales nada
       tiene sentido.
     </p>
     <p>Redondear preguntando:</p>
@@ -118,7 +118,7 @@
     <p>¿Qué pasos queremos dar ahora?</p>
     <p>
       En base a los valores seleccionados y todo lo conversado, redactar el
-      compromiso que asu- mirán al hacer la renovación de la promesa. Acompañar
+      compromiso que asumirán al hacer la renovación de la promesa. Acompañar
       con mucha atención este momento.
     </p>
     <p>
@@ -198,7 +198,7 @@
     </p>
     <p>
       Se puede acompañar escribiendo el nombre de la consigna, una frase
-      relacionada o un obje- to de la naturaleza que la represente.
+      relacionada o un objeto de la naturaleza que la represente.
     </p>
     <p>
       Cuando hayan pasado todos, invitar que dejen marcada con fuerza su huella
@@ -237,7 +237,7 @@
     </p>
     <p>
       Recordar las distintas actividades realizadas y analizar los cambios de
-      actitudes que se no- tan con respecto al comienzo, las dificultades
+      actitudes que se notan con respecto al comienzo, las dificultades
       superadas y las cosas que aún falta mejorar.
     </p>
     <p>
@@ -252,7 +252,7 @@
     <p>Dejar un momento de silencio y reﬂexión personal.</p>
     <p>
       Invitar a redactar el compromiso que asumirán al hacer la renovación de la
-      promesa. Acom- pañar con mucha atención este momento.
+      promesa. Acompañar con mucha atención este momento.
     </p>
     <p>Comentar sobre los nuevos desafíos que les esperan</p>
     <ul>
@@ -288,7 +288,7 @@
     <p>
       El esquema de celebración propuesto se puede simplificar y hacerlo con
       menos elementos y despliegue, pero respetando el momento central de la
-      transformación de la hoguera en antor- chas que encierra el sentido de la
+      transformación de la hoguera en antorchas que encierra el sentido de la
       Renovación de la Promesa
     </p>
     <p>
@@ -297,7 +297,7 @@
     </p>
     <p>
       Explicar las características generales de la meta de Rastreadores y
-      Hogueras, como el em- blema, los objetivos y el lema. Es conveniente
+      Hogueras, como el emblema, los objetivos y el lema. Es conveniente
       ilustrarlo con un buen dibujo o cartel escrito.
     </p>
     <p>
@@ -357,7 +357,7 @@
     <h3>- Se comparte:</h3>
     <p>
       Ambientar mostrando una imagen del emblema de Rastreadores/Hogueras y uno
-      de Baquia- nos/Antorchas.
+      de Baquianos/Antorchas.
     </p>
     <h3>- Se reza y se celebra:</h3>
     <p>
@@ -374,7 +374,7 @@
     <p>
       <em
         >Los hombres no lo dejarían nacer en su casa. Allí tal vez quedó la
-        cunita que le habían prepa- rado; y las vecinas que habrían venido a
+        cunita que le habían preparado; y las vecinas que habrían venido a
         compartir la alegría y los pequeños servicios que trae</em
       >
     </p>
