--- a/src/27-las-aventuras-de-bui-camey.html
+++ b/src/27-las-aventuras-de-bui-camey.html
@@ -128,7 +128,7 @@
     </p>
     <p>
       – A ver veamos mi BUI CAMEY. Si no he observado mal, los he visto a todos
-      juntos jugar a la pe- lota, arreglando el refugio, colaborando en la
+      juntos jugar a la pelota, arreglando el refugio, colaborando en la
       colecta y en el cumpleaños de NENEO, ¿no es así?
     </p>
     <p>– Así es Abuelo, pero …</p>
@@ -141,7 +141,7 @@
     </p>
     <p>
       No basta que la Patrulla esté unida y lo está, sino no se reunirían para
-      trabajar, jugar y ayu- dar, pero sí le falta el espíritu de familia.
+      trabajar, jugar y ayudar, pero sí le falta el espíritu de familia.
     </p>
     <p>– ¿Familia? ¿Pero cómo?</p>
     <p>
@@ -194,7 +194,7 @@
     </p>
     <p>
       Y tantos fueron los gritos de aquellos hombres que lograron sacar a Buí de
-      todos sus pensa- mientos.
+      todos sus pensamientos.
     </p>
     <p>
       “Formemos grupos para ir en su búsqueda” decía uno. “matémoslo” era quizás
@@ -232,7 +232,7 @@
     <p>
       Al llegar, la Patrulla ya se encontraba reunida en el refugio, estaban
       todos ellos ÑORQUINCO, MAMUIL, AÑELO, TREVELIN, HUINCUL, CHIUIDO, NENEO
-      RUCA y HUECHULAFQUEN, y allí escu- charon muy atentos los que el Abuelo
+      RUCA y HUECHULAFQUEN, y allí escucharon muy atentos los que el Abuelo
       Líder les dijera:
     </p>
     <p>
@@ -277,7 +277,7 @@
     </p>
     <p>
       debemos seguir superándonos y formándonos entre todos, la unidad lograda
-      tiene que ayu- darnos ahora a vivir en familia.
+      tiene que ayudarnos ahora a vivir en familia.
     </p>
     <p>
       Ello no lo lograremos sentados en una mesa pensando las formas de
@@ -302,12 +302,12 @@
     </p>
     <p>
       Siempre, el comienzo de las caminatas llama al entusiasmo de poder
-      descubrir lo que el ho- rizonte les mostrará allí, donde los ojos no
+      descubrir lo que el horizonte les mostrará allí, donde los ojos no
       llegan a ver que hay entre el cielo y la tierra.
     </p>
     <p>
       Siempre tras su bandera, siempre en formación, siempre charlando y
-      cantando, siempre lis- tos y más en esta oportunidad, pues van tras el
+      cantando, siempre listos y más en esta oportunidad, pues van tras el
       rastro del pequeño lobo solitario.
     </p>
     <p>
@@ -391,7 +391,7 @@
       En verdad la caminata se hizo pesada, tanto que nadie hablaba ahora
       ahorrando todas las energías. En las llanuras pueden verse a lo lejos las
       arboledas, que en cierta forma en la larga caminata, marcan como el fin del
-      camino pero que no son más que un pequeño bastión logra- do y que apenas
+      camino pero que no son más que un pequeño bastión logrado y que apenas
       traspuesto hay otro muy lejano que alcanzar.
     </p>
     <p>
@@ -410,7 +410,7 @@
     <p>
       Llegaba el mediodía y esta vez había que cocinar. No fue problema pues la
       Patrulla sabía cómo hacerlo y estaban organizados y adiestrados para ello.
-      Cada uno sabía lo que le corres- pondía y así fue que no tardaron en
+      Cada uno sabía lo que le correspondía y así fue que no tardaron en
       prender el fuego, cocinar y almorzar.
     </p>
     <p>
@@ -458,7 +458,7 @@
     </p>
     <p>
       – (MAMUIL se animó y dijo) yo este … trato de aprender carpintería y por
-      eso lo estoy ayudan- do a Don Florencio en el pueblo, y ya estoy bastante
+      eso lo estoy ayudando a Don Florencio en el pueblo, y ya estoy bastante
       adelantado ¿saben?
     </p>
     <p>
@@ -468,16 +468,16 @@
     </p>
     <p>
       CHIUIDO, AÑELO, HUECHULAFQUEN y NENEO se asociaron a los motivos de los
-      otros, mien- tras que HUINCUL mantenía silencio.
+      otros, mientras que HUINCUL mantenía silencio.
     </p>
     <p>– ¿Y vos HUINCUL? (le preguntó MAMUIL)</p>
     <p>
       Pero este levantando los hombros no decía palabra alguna. BUI CAMEY,
-      entonces para ha- cerlo hablar les dijo a los demás:
+      entonces para hacerlo hablar les dijo a los demás:
     </p>
     <p>
       – Yo les voy a decir porque HUINCUL no viene al refugio. Es que en el
-      pueblo hay una paisa- nita que le distrae su mirada
+      pueblo hay una paisanita que le distrae su mirada
     </p>
     <p>
       – ¡No, es mentira! (rápido y vergonzoso HUINCUL replicó) yo les voy a
@@ -488,7 +488,7 @@
     </p>
     <p>
       – Vamos… (le bromeo MAMUIL) decinos como se llama (despertando la risa de
-      todos y po- niendo en apuros a HUINCUL)
+      todos y poniendo en apuros a HUINCUL)
     </p>
     <p>
       Sin desperdiciar ese valioso momento para el diálogo, BUI CAMEY dijo
@@ -605,7 +605,7 @@
     <p>
       Era un montañés de unos 45 años, eso creo, porque la juventud que
       traslucía su mirada se contradecía con las arrugas profundas en su frente
-      y en su rostro, su cabello si bien abundan- te y ondulado, tenía ya un
+      y en su rostro, su cabello si bien abundante y ondulado, tenía ya un
       tenue color grisáceo.
     </p>
     <p>
@@ -620,7 +620,7 @@
     </p>
     <p>
       – Somos exploradores señor, venimos de Pilcaniyeu (y de esa manera cada
-      uno se fue pre- sentando)
+      uno se fue presentando)
     </p>
     <p>
       – Bernardo es mi nombre, síganme, vamos a mi cabaña, son mis invitados
@@ -642,7 +642,7 @@
     <p>
       – Ah, esos cazadores, nunca descansan … nunca aprenderán a respetar a la
       naturaleza, si tan solo ese odio que los ciega les permitiera tan solo por
-      un instante ser un poco observado- res, dudo que hicieran lo que hacen …
+      un instante ser un poco observadores, dudo que hicieran lo que hacen …
     </p>
     <p>– ¿Observar? No entendemos señor Bernardo (dijo Buí)</p>
     <p>
@@ -657,12 +657,12 @@
     </p>
     <p>
       – Ah, veo que algo saben de lo que he dicho. Pero veamos, a ver si me
-      entienden mejor. ¿Sa- ben ustedes como hacen las abejas para producir
+      entienden mejor. ¿Saben ustedes como hacen las abejas para producir
       miel?
     </p>
     <p>
       –La verdad que no señor, nuestro Abuelo Líder nos enseñó a hablar como si
-      fuéramos abe- jas, pero no como producir miel? (contesto MAMUIL)
+      fuéramos abejas, pero no como producir miel? (contesto MAMUIL)
     </p>
     <p>
       – Yo se los diré, pues deseo que aprendan a hacer la miel como las abejas
@@ -671,7 +671,7 @@
     <p>Principalmente con dos cosas:</p>
     <p>
       La primera, no la hace cada una por sí sola, sino bajo la dirección de una
-      reina, a quien obe- decen en todo momento; y están juntas y se ayudan
+      reina, a quien obedecen en todo momento; y están juntas y se ayudan
       mutuamente.
     </p>
     <p>
@@ -714,7 +714,7 @@
       Observe cada uno la conducta de sus compañeros, lo que hay de mejor
       procure imitarlo. De uno aprenderá a ser humilde y a no hablar tanto de si
       mismo, si ve a otro que es de los primros en la escuela aprenda de él a
-      cumplir con exactitud todos sus deberes. Veo a un compañe- ro que es bueno
+      cumplir con exactitud todos sus deberes. Veo a un compañero que es bueno
       y devoto y yo sigo ese buen ejemplo.
     </p>
     <p>
@@ -724,12 +724,12 @@
     </p>
     <p>
       De este modo, no tardarán mucho en hacerse ricos de miel, es decir de
-      buenos conocimien- tos, de buenas obras y de santa alegría producto de la
+      buenos conocimientos, de buenas obras y de santa alegría producto de la
       paz de corazón.
     </p>
     <p>
       Aquel montañés, hablaba casi con la misma sabiduría del Abuelo Líder
-      MACHINCO. Los jo- vencitos exploradores, lo ayudaron a poner todo en
+      MACHINCO. Los jovencitos exploradores, lo ayudaron a poner todo en
       orden, curiosamente en silencio.
     </p>
     <p>
@@ -775,12 +775,12 @@
     <p>
       El camino se hacía cada vez más duro, y requería mayores sacrificios, y en
       la dureza de la caminata empezaron algunos enojos y reproches, tanto que
-      hasta BUI CAMEY tuvo que inter- venir para calmar los ánimos.
+      hasta BUI CAMEY tuvo que intervenir para calmar los ánimos.
     </p>
     <p>
       El cansancio y el nerviosismo, incluso provocaba aireadas discusiones
       cuando alguno de ellos le contaba a Bernardo, algún logro o aventura que
-      lo había tenido por protagonista, po- niéndose por sobre los demás.
+      lo había tenido por protagonista, poniéndose por sobre los demás.
     </p>
     <p>
       El montañés, acostumbrado a una vida solitaria, sabía observarlo todo. Así
@@ -796,11 +796,11 @@
     <p>Luego señalando a uno le dijo:</p>
     <p>
       – Anda, ve tú TREVELIN, llega aquel cementerio y entre aquellas tumbas
-      diles todos los im- properios que sabes y todos los que puedas inventar.
+      diles todos los improperios que sabes y todos los que puedas inventar.
     </p>
     <p>
       Enseguida (contestó TREVELIN) y fue e hizo todo cuanto el montañés le
-      había indicado. Des- pués de unos minutos volvió y Bernardo le preguntó.
+      había indicado. Después de unos minutos volvió y Bernardo le preguntó.
     </p>
     <p>– ¿Hiciste lo que te dije?</p>
     <p>– Sí, lo hice (dijo TREVELIN)</p>
@@ -824,7 +824,7 @@
     </p>
     <p>
       Si quieren ustedes ser mejores, deben mostrarse impasibles y muertos como
-      aquellas tum- bas a cuantas injurias y a cuantas alabanzas puedan
+      aquellas tumbas a cuantas injurias y a cuantas alabanzas puedan
       hacerles.
     </p>
     <p>
@@ -878,13 +878,13 @@
       Ya a los pies de las primeras montañas, BUI CAMEY entendió que había que
       separarse para que de esa manera pudieran abarcar una mayor extensión, y
       así fue que cada uno se separó del otro aproximadamente unos veinte
-      metros, y en esa larga formación avanzaron lentamen- te, esperanzados en
+      metros, y en esa larga formación avanzaron lentamente, esperanzados en
       ver a DIN, el pequeño lobo solitario.
     </p>
     <p>
       Avanzaron como se lo habían propuesto, pero la sinuosidad y la vegetación
       de las montañas, los hacía perder de vista a sus demás compañeros. Eso no
-      resultó, coincidieron todos reuni- dos nuevamente. Había que buscar otro
+      resultó, coincidieron todos reunidos nuevamente. Había que buscar otro
       método, pues la noche ya los amenazaba.
     </p>
     <p>
@@ -938,7 +938,7 @@
     </p>
     <p>
       Los lastimaba el pensar, que aquel pequeño lobo, hubiese ya caído en las
-      manos de los ca- zadores que no sabían de piedad.
+      manos de los cazadores que no sabían de piedad.
     </p>
     <p>
       Mas así, no pudieron seguir. Se estaban engañando. Había que detenerse y
@@ -962,7 +962,7 @@
     </p>
     <p>
       Ladridos se escuchaban a lo lejos, eran sin duda los perros de los
-      cazadores. Ahora, sí es- taban cerca.
+      cazadores. Ahora, sí estaban cerca.
     </p>
     <p>
       <strong
@@ -1035,7 +1035,7 @@
     <p>Y los exploradores estaban tan lejos aún …</p>
     <p>
       Los cazadores ya frente al pequeño DIN, lo miraban causándole gracia lo
-      aterrado que esta- ba en medio de aquel círculo de perros, que le ladraban
+      aterrado que estaba en medio de aquel círculo de perros, que le ladraban
       sin parar.
     </p>
     <p>El mas decidido cazador, se adelantó y apuntó su escopeta hacia DIN.</p>
@@ -1048,7 +1048,7 @@
     </p>
     <p>
       DIN, mortalmente herido, estaba tirado en su propio mar de sangre. Sus
-      ojos perdidos, bus- caban alivio a su dolor.
+      ojos perdidos, buscaban alivio a su dolor.
     </p>
     <p>
       El cazador como ignorando la presencia de los rastreadores de Pilcaniyeu,
@@ -1058,7 +1058,7 @@
     <p>– ¡Baje esa arma del demonio! (le grito HUECHU)</p>
     <p>
       – Ya le han hecho bastante daño al pobre, y no permitiremos que sigan
-      lastimándolo (lo in- crepó BUI CAMEY, poniéndose delante del pobre
+      lastimándolo (lo increpó BUI CAMEY, poniéndose delante del pobre
       animal).
     </p>
     <p>
@@ -1074,7 +1074,7 @@
     <p>
       El humo se disipaba, y los cazadores empezaban a marcharse. DIN agonizaba.
       Los explordores se hallaban desesperados, el enfermero de la Patrulla era
-      el centro de todas las tensio- nes, pero el pobre que podía hacer ante
+      el centro de todas las tensiones, pero el pobre que podía hacer ante
       semejante cuadro.
     </p>
     <p>DIN, en tanto, moría silenciosamente.</p>
@@ -1181,7 +1181,7 @@
     </p>
     <p>
       El destino los había unido en aquella aventura, los unió un entrañable
-      lazo de amor, tan fuer- te y tan largo que ni el tiempo mismo podría
+      lazo de amor, tan fuerte y tan largo que ni el tiempo mismo podría
       corromper.
     </p>
     <p>
@@ -1215,7 +1215,7 @@
     </p>
     <p>
       Golpearon la puerta y esperaron algunos segundos, y una señora los atendió
-      muy amable- mente.
+      muy amablemente.
     </p>
     <p>
       – Buen día señora, quisiera usted ser tan amable de darnos un poco de
@@ -1255,13 +1255,13 @@
       No le alcanzaban los oídos al Abuelo para escuchar de todos, tantas
       anécdotas sobre esta nueva aventura. Mas llegó el momento de separarse,
       esta despedida era distinta a tantas otras, ese apretón de manos no
-      bastaba, había entre ellos un sentimiento nuevo, indescifra- ble que no
+      bastaba, había entre ellos un sentimiento nuevo, indescifrable que no
       sabían como explicar, así pues, sin embargo se marcharon a sus respectivas
       casas.
     </p>
     <p>
       En la noche todos tuvieron el mismo pensamiento, recordaron lo que les
-      dijera aquella Seño- ra y pese al cansancio en sus oraciones pidieron por
+      dijera aquella Señora y pese al cansancio en sus oraciones pidieron por
       cada uno de los integrantes de la Patrulla.
     </p>
     <p>
@@ -1312,7 +1312,7 @@
     </p>
     <p>
       Es allí, en las grandes y altas montañas donde la luna acostumbra posarse,
-      el hogar de <strong>DIN</strong> el pequeño lobo ya nun- ca más solitario.
+      el hogar de <strong>DIN</strong> el pequeño lobo ya nunca más solitario.
     </p>
     <p>
       Es allí, donde puede vérselo en la noche saludar con su aullido a sus
@@ -1324,7 +1324,7 @@
     </p>
     <p>
       Una historia de amistad, por la que <strong>DIN</strong> ya nunca más
-      estará solo y en peligro, pues sabrá que Siempre Listos esta- rán
+      estará solo y en peligro, pues sabrá que Siempre Listos estarán
       <strong>BUI CAMEY</strong> y su <strong>PATRULLA FAMILIA</strong> .
     </p>
     <p><em>Esta historia continuará…</em></p>
