--- a/src/11-verdad.html
+++ b/src/11-verdad.html
@@ -69,7 +69,7 @@
       ¿Qué características tendría la Verdad según el Papa Francisco? Ante todo,
       no existe una vedad única, hay que captar lo positivo del otro. No hay que
       buscar una verdad que divida, la verdad debe ser constructiva. Es un doble
-      compromiso: denunciar lo injusto y asumir la res- ponsabilidad de
+      compromiso: denunciar lo injusto y asumir la responsabilidad de
       mejorarlo
     </p>
     <h2>TEXTO PARA REFLEXIONAR Y ORIENTAR EL TRABAJO</h2>
@@ -77,7 +77,7 @@
     <p>
       <em
         >«Jesús dijo a aquellos judíos que habían creído en él: “Si ustedes
-        permanecen fieles a mi pala- bra, serán verdaderamente mis discípulos:
+        permanecen fieles a mi palabra, serán verdaderamente mis discípulos:
         conocerán la verdad y la verdad los hará libres”.»</em
       >
     </p>
@@ -123,7 +123,7 @@
     <h3>- Orientación:</h3>
     <p>
       Esta actividad busca que el Rastreador-Hoguera reﬂexione la importancia de
-      optar por la ver- dad. Verdad que también se traduce en ser sincero con
+      optar por la verdad. Verdad que también se traduce en ser sincero con
       uno mismo.
     </p>
     <h3>- Actividad:</h3>
@@ -146,12 +146,12 @@
       <li>
         <strong>2.</strong> Cerca de allí, en un lugar donde los integrantes de
         la patrulla no lo vean, tener armada Una "estatua". Esa estatua puede
-        ser una persona disfrazada o un objeto con distintas par- tes que al
+        ser una persona disfrazada o un objeto con distintas partes que al
         tocarlas sugieran cosas diferentes.
       </li>
       <li>
         <strong>3.</strong> Estando el grupo reunido, se les dice que hay una
-        sorpresa para ellos y tienen que descu- brir de qué se trata.
+        sorpresa para ellos y tienen que descubrir de qué se trata.
       </li>
       <li>
         <strong>4.</strong> Hacer pasar de a uno a los integrantes del grupo al
@@ -186,7 +186,7 @@
       </li>
       <li>
         <strong>10.</strong> Conversar ampliamente sobre el tema. Destacar la
-        importancia de saber apreciar las co- sas buenas.
+        importancia de saber apreciar las cosas buenas.
       </li>
       <li>
         <strong>11.</strong> Al terminar con las cosas positivas del grupo,
@@ -278,7 +278,7 @@
       debe ser guardado: implica la honradez y la discreción; evita la
       duplicidad, la simulación y la hipocresía. En cada momento debemos elgir
       entre la verdad o la mentira (disfrazando o acomodando la verdad). No
-      siempre es beneficio- sa para uno (por lo menos en lo inmediato) pero
+      siempre es beneficiosa para uno (por lo menos en lo inmediato) pero
       igualmente debe ser responsablemente dicha.
     </p>
     <h3>Palabra de Dios: La corrección fraterna" (Mt. 18, 15-17)</h3>
@@ -306,7 +306,7 @@
       </li>
       <li>
         2. Decirle un mensaje al primero, que sale corriendo hasta donde está el
-        segundo y le trans- mite el mensaje recibido.
+        segundo y le transmite el mensaje recibido.
       </li>
       <li>
         <strong>3.</strong> Todos harán lo mismo hasta el último que corre hasta
@@ -325,7 +325,7 @@
       </li>
       <li>
         <strong>6.</strong> Analizar situaciones de la vida real donde se cambie
-        la verdad, se la oculte, o se la acomo- de para beneficio propio.
+        la verdad, se la oculte, o se la acomode para beneficio propio.
       </li>
       <li>
         <strong>7.</strong> Buscar ejemplos donde los chicos sean los
@@ -368,7 +368,7 @@
     <p>
       La verdad es un compromiso importante al que hay que serle fiel, como
       decimos en la orción del explorador. Las promesas o compromisos asumidos
-      sólo tienen sentido si son autén- ticos, verdaderos y sé los mantiene con
+      sólo tienen sentido si son auténticos, verdaderos y sé los mantiene con
       fidelidad.
     </p>
     <p>
@@ -387,7 +387,7 @@
     <p>
       En Jesucristo la verdad de Dios se manifestó en plenitud. "lleno de gracia
       y de verdad", él es la "luz del mundo". El cree en él, no permanece en las
-      tinieblas. El discípulo de Jesús, “perma- nece en su palabra", para
+      tinieblas. El discípulo de Jesús, “permanece en su palabra", para
       conocer "la verdad que hace libre".
     </p>
     <p>
@@ -410,14 +410,14 @@
     <h3>- Orientación:</h3>
     <p>
       Esta actividad busca introducir la figura de Jaime de Nevares, como ejemplo
-      cercano a testi- monio de una verdad comprometida y que denuncia la
+      cercano a testimonio de una verdad comprometida y que denuncia la
       injusticia.
     </p>
     <h3>- Actividad:</h3>
     <ol>
       <li>
         <strong>1.</strong> Leer el texto "La verdad nos hará libres" de la
-        historia de Jaime de Nevares y comentar bre- vemente los hechos
+        historia de Jaime de Nevares y comentar brevemente los hechos
         principales de su vida.
       </li>
       <li>
@@ -436,7 +436,7 @@
       </li>
       <li>
         <strong>5.</strong> Dar un tiempo para que empiecen a preparar lo que
-        les tocó. Los grupos no pueden con- sultarse entre sí.
+        les tocó. Los grupos no pueden consultarse entre sí.
       </li>
       <li>
         <strong>6.</strong> El grupo del guión verá qué cosas irán diciendo los
@@ -459,7 +459,7 @@
       <li>
         <strong>9.</strong> Entonces juntarlos a todos nuevamente y hacer que
         rápidamente se expliquen lo que prpararon y enseguida hacer la
-        presentación de la obra. Es probable que salga bastante des- coordinado.
+        presentación de la obra. Es probable que salga bastante descoordinado.
       </li>
       <li>
         <strong>10.</strong> Parar un momento y hacer unas preguntas: ¿Qué pasó?
@@ -492,7 +492,7 @@
       </li>
       <li>
         <strong>16.</strong> Comentar las diferencias con el primer ensayo,
-        viendo cómo el anuncio toma fuerza cuan- do las palabras son coherentes
+        viendo cómo el anuncio toma fuerza cuando las palabras son coherentes
         con las actitudes.
       </li>
     </ol>
@@ -503,7 +503,7 @@
     </p>
     <p>
       Jaime de Nevares, sacerdote salesiano nacido en Buenos Aires en 1915, fue
-      obispo de Neu- quén desde el año 1961.
+      obispo de Neuquén desde el año 1961.
     </p>
     <p>
       En Neuquén pasó a ser "Don Jaime". Fue creciendo esa relación tan fuerte
@@ -516,7 +516,7 @@
     <p>
       En el año 1969 intervino frente a los abusos que se cometían con los
       obreros de El Chacón. Fue frontal en su enfrentamiento con el gobierno de
-      facto que había entonces. Se negó a ben- decir la capilla de El Chacón
+      facto que había entonces. Se negó a bendecir la capilla de El Chacón
       hasta que no se hiciera justicia con los obreros.
     </p>
     <p>
@@ -543,7 +543,7 @@
     </p>
     <p>
       Fue invitado a ser presidente honorario de la Asamblea Permanente por los
-      Derechos Huma- nos (APDH).
+      Derechos Humanos (APDH).
     </p>
     <p>
       En la guerra de Malvinas, con otros sacerdotes, emitió un comunicado
@@ -560,7 +560,7 @@
     <p>
       "El fuego para que caliente debe venir desde abajo" repetía en numerosas
       oportunidades, como metáfora de su opción. "Tata Dios nos pide coraje,
-      quiere que no nos achiquemos" aña- día en su lenguaje sencillo, profundo e
+      quiere que no nos achiquemos" añadía en su lenguaje sencillo, profundo e
       inteligente que lo caracterizaba.
     </p>
     <p>
@@ -674,7 +674,7 @@
       </li>
       <li>
         5. Hacer un instante de silencio luego de cada intención, imaginándose a
-        alguno de los per- sonajes de la canción en la situación nombrada.
+        alguno de los personajes de la canción en la situación nombrada.
       </li>
     </ol>
     <h3>- Se actúa:</h3>
